Various edits and typo fixes, plus released on revised MA 3.

--- a/01_agama/dirgha/DA_10.md
+++ b/01_agama/dirgha/DA_10.md
@@ -8,7 +8,9 @@ next: DA_11.html
 ---
 
 # [The Long Discourses](index.html)
-## 10. Going Up to Ten
+## Part II
+### 10. Going Up to Ten
+
 
 1\. Thus I have heard:[\[1\]](#n1){:#ref1} One time, the Buddha traveled to Aṅga accompanied by a great assembly of 1,250 monks. They went to the city of Campā and stayed near Lake Gargarā.[\[2\]](#n2){:#ref2}
 {:#p1}
