--- a/01_agama/dirgha/DA_11.md
+++ b/01_agama/dirgha/DA_11.md
@@ -8,7 +8,9 @@ next: DA_12.html
 ---
 
 # [The Long Discourses](index.html)
-## 11. Increasing One by One
+## Part II
+### 11. Increasing One by One
+
 
 1\. Thus I have heard:[\[1\]](#n1){:#ref1} One time, the Buddha was staying at Anāthapiṇḍada’s Park in Jeta’s Grove of Śrāvastī. He was accompanied by a great assembly of 1,250 monks.
 {:#p1}
