--- a/01_agama/dirgha/DA_20.md
+++ b/01_agama/dirgha/DA_20.md
@@ -7,7 +7,8 @@ previous: DA_19.html
 next: DA_21.html
 ---
 # [The Long Discourses](index.html)
-## 20. Ambāṣṭha
+## Part III
+### 20. Ambāṣṭha
 
 1\. Thus I have heard:[\[1\]](#n1){:#ref1} One time, the Buddha traveled to Kośala accompanied by a great assembly of 1,250 monks. They went to the Kośala priest village of Icchānaṅgala and stopped to rest in a citron grove.[\[2\]](#n2){:#ref2}
 {:#p1}
