--- a/01_agama/dirgha/DA_21.md
+++ b/01_agama/dirgha/DA_21.md
@@ -7,7 +7,8 @@ previous: DA_20.html
 next: DA_22.html
 ---
 # [The Long Discourses](index.html)
-## 21. Brahmā’s Shaking
+## Part III
+### 21. Brahmā’s Shaking
 
 1\. Thus I have heard:[\[1\]](#n1){:#ref1} One time, the Buddha traveled to Magadha accompanied by an assembly of 1,250 great monks. Wandering among the people, they reached the bamboo grove and stopped to stay at the royal palace.[\[2\]](#n2){:#ref2}
 {:#p1}
