--- a/01_agama/dirgha/DA_22.md
+++ b/01_agama/dirgha/DA_22.md
@@ -8,7 +8,8 @@ next: DA_23.html
 ---
 
 # [The Long Discourses](index.html)
-## 22. Śroṇatāṇḍya
+## Part III
+### 22. Śroṇatāṇḍya
 
 1\. Thus I have heard:[\[1\]](#n1){:#ref1} One time, the Buddha was staying in Aṅga accompanied by a great assembly of 1,250 monks. They traveled among the people, stopping to stay at the city of Campā by the side of Gargā Pond.
 {:#p1}
