--- a/01_agama/dirgha/DA_24.md
+++ b/01_agama/dirgha/DA_24.md
@@ -8,7 +8,8 @@ next: DA_25.html
 ---
 
 # [The Long Discourses](index.html)
-## 24. Dhruva
+## Part III
+### 24. Dhruva
 
 1\. Thus I have heard:[\[1\]](#n1){:#ref1} One time, the Buddha was staying at the city of Nālanda in Prāvārika’s mango grove.[\[2\]](#n2){:#ref2} He was accompanied by a great assembly of 1,250 monks.
 {:#p1}
