--- a/01_agama/dirgha/DA_27.md
+++ b/01_agama/dirgha/DA_27.md
@@ -7,7 +7,8 @@ previous: DA_26.html
 next: DA_28.html
 ---
 # [The Long Discourses](index.html)
-## 27. The Fruits of the Ascetics
+## Part III
+### 27. The Fruits of the Ascetics
 
 1\. Thus I have heard:[\[1\]](#n1){:#ref1} One time, the Buddha was staying at Rājagṛha in Jīvaka’s Mango Park. He was accompanied by a great assembly of 1,250 monks.
 {: #p1}
