--- a/01_agama/dirgha/DA_28.md
+++ b/01_agama/dirgha/DA_28.md
@@ -7,7 +7,8 @@ previous: DA_27.html
 next: DA_29.html
 ---
 # [The Long Discourses](index.html)
-## 28. Pṛṣṭhapāla
+## Part III
+### 28. Pṛṣṭhapāla
 
 1\. Thus I have heard:[\[1\]](#n1){:#ref1} One time, the Buddha was staying at Anāthapiṇḍada’s Park of Śrāvastī. He was accompanied by a great assembly of 1,250 monks.
 {: #p1}
