--- a/01_agama/dirgha/DA_29.md
+++ b/01_agama/dirgha/DA_29.md
@@ -7,7 +7,8 @@ previous: DA_28.html
 next: DA_30-1.html
 ---
 # [The Long Discourses](index.html)
-## 29. Lohitya
+## Part III
+### 29. Lohitya
 
 1\. Thus I have heard:[\[1\]](#n1){:#ref1} One time, the Buddha was in Kauśala touring among the people. With an assembly of 1,250 great monks, he went to the brahmin town of \*Śālavatī and stopped to rest to the north in a rosewood grove.[\[2\]](#n2){:#ref2}
 {:#p1}
