--- a/01_agama/dirgha/DA_30-1.md
+++ b/01_agama/dirgha/DA_30-1.md
@@ -8,9 +8,10 @@ next: DA_30-2.html
 ---
 
 # [The Long Discourses](index.html)
-## 30. Description of the World
-### Chapter 1: The Continent of Jambudvīpa
-#### Introduction
+## Part IV
+### 30. Description of the World
+#### Chapter 1: The Continent of Jambudvīpa
+##### Introduction
 
 1\. Thus I have heard:[\[1\]](#n1){:#ref1} One time, the Buddha was staying in the Karīrika Hut in Anāthapiṇḍada’s Park at Jeta’s Grove of Śrāvastī. He was accompanied by a great assembly of 1,250 monks.
 {:#p1}
@@ -31,7 +32,7 @@ The monks said to the Buddha, “Indeed, Bhagavān, now would be a good time! We
 6\. The Buddha said, “Monks, listen closely! Listen closely and consider it well! I will explain it for you.”
 {:#p6}
 
-#### The Buddha Realm
+##### The Buddha Realm
 
 7\. The Buddha told the monks, “Just as one sun and moon orbit the four continents and shine their light on them, there are a thousand such worlds.[\[2\]](#n2){:#ref2} In a thousand worlds, there are a thousand suns and moons, a thousand Sumeru mountain kings, four thousand continents, four thousand great continents, four thousand oceans, four thousand great oceans, four thousand nāgas, four thousand great nāgas, four thousand garuḍas, four thousand great garuḍas, four thousand unpleasant destinies, four thousand great unpleasant destinies, four thousand kings, four thousand great kings, seven thousand great trees, eight thousand great hells, ten thousand great mountains, a thousand King Yamas, a thousand four god kings, a thousand Trāyastriṃśa Heavens, a thousand Yama Heavens, a thousand Tuṣita Heavens, a thousand Nirmāṇarati Heavens, a thousand Paranirmitavaśavartin Heavens, and a thousand Brahma Heavens. This is a small thousand worlds.
 {:#p7}
@@ -39,7 +40,7 @@ The monks said to the Buddha, “Indeed, Bhagavān, now would be a good time! We
 8\. “Like one small thousand worlds, a thousand of those small thousand worlds are a medium thousand worlds. Like one medium thousand worlds, a thousand of those medium thousand worlds are a triple-thousand great thousand worlds. Such worlds revolve around as they form and are destroyed. The sentient beings that inhabit them are called a single Buddha realm.”
 {:#p8}
 
-#### The World
+##### The World
 
 9\. The Buddha told the monks, “Now, this Earth is 168,000 yojanas deep,[\[3\]](#n3){:#ref3} and its bounds are endless [in the four directions]. Where the earth stops, there’s water. The water is 3,030 yojanas deep, and its bounds are endless. Where the water stops, there’s air. The air is 6,040 yojanas deep, and its bounds are endless.
 {:#p9}
@@ -74,7 +75,7 @@ The monks said to the Buddha, “Indeed, Bhagavān, now would be a good time! We
 19\. The Buddha told the monks, “There are yakṣa spirits that live on the lower stairway called Karoṭapāṇi. The yakṣa spirits that live on the middle stairway are called Mālādhāra. The yakṣa spirits that live on the upper stairway are called Sadāmada.
 {:#p19}
 
-#### The Heavens
+##### The Heavens
 
 20\. “The four crags rise to a height of 42,000 yojanas, and the four great god kings live on them in their palaces. Their palaces have seven fortress walls, seven balustrades, seven nettings, and seven rows of trees with precious bells … Countless birds of many kinds sing peacefully to each other as before.
 {:#p20}
@@ -97,7 +98,7 @@ The monks said to the Buddha, “Indeed, Bhagavān, now would be a good time! We
 26\. “These are called the boundaries of sentient beings and the worlds of sentient beings where they all are born, grow old, fall ill, and die. They acquire these aggregates and these existences, and none go beyond that.”
 {:#p26}
 
-#### The Four Continents
+##### The Four Continents
 
 27\. The Buddha told the monks, “North of Mount Sumeru, there is a continent named Uttarakuru. That land is perfectly square and 10,000 yojanas across. The people there have square faces that resemble the shape of their land.
 {:#p27}
@@ -114,7 +115,7 @@ The monks said to the Buddha, “Indeed, Bhagavān, now would be a good time! We
 31\. “The north side of Mount Sumeru is made of heavenly gold that shines northward. The east side of Mount Sumeru is made of heavenly silver that shines eastward. The west side of Mount Sumeru is made of heavenly crystal that shines westward. The south side of Mount Sumeru is made of heavenly beryl that shines southward.
 {:#p31}
 
-#### The Great Trees of the World
+##### The Great Trees of the World
 
 32\. “Uttarakuru has a great tree king named Amra. It’s seven yojanas around and a hundred yojanas tall. Its limbs and leaves spread out for fifty yojanas in each direction.
 {:#p32}
@@ -137,7 +138,7 @@ The monks said to the Buddha, “Indeed, Bhagavān, now would be a good time! We
 38\. “The Trāyastriṃśa Heaven has a tree named Pārijāta. It’s seven yojanas around and a hundred yojanas tall. Its limbs and leaves spread out for fifty yojanas in each direction.
 {:#p38}
 
-#### Lesser Mountains around Sumeru
+##### Lesser Mountains around Sumeru
 
 39\. “Mount Sumeru is bordered by a mountain named Khadiraka. It’s 42,000 yojanas tall and 42,000 yojanas across. Its extent is spacious with a mixture of colors throughout, and it’s made of the seven treasures.
 {:#p39}
@@ -187,7 +188,7 @@ The monks said to the Buddha, “Indeed, Bhagavān, now would be a good time! We
 54\. “That mountain sits 600 yojanas away from Mount Vinitaka, and utpala flowers, padma flowers, kumuda flowers, puṇḍarīka flowers, reeds, pine trees, and bamboo groves grow between them. They produce all sorts of fragrances that fill the area.
 {:#p54}
 
-#### Beyond the Lesser Mountains
+##### Beyond the Lesser Mountains
 
 55\. “Not far beyond Mount Cakravāḍa is a great ocean. On the north shore of that ocean is the great tree king named Jambu that’s seven yojanas around and a hundred yojanas tall. Its limbs and leaves spread out for fifty yojanas in each direction. It’s bordered by an open area.
 {:#p55}
@@ -278,7 +279,7 @@ There’s another forest named Grape that’s fifty yojanas across.
 61\. “Beyond that Mount Golden Wall, there’s a mountain named Himavat. It’s five hundred yojanas across and five hundred yojanas high. The ocean is to its east and west, and there are treasure mountains twelve yojanas tall between it and Mount Himavat.
 {:#p61}
 
-#### Lake Anavatapta
+##### Lake Anavatapta
 
 62\. “Crags rises up a hundred yojanas from Mount Himavat. Lake Anavatapta is at the summit of that mountain. It’s fifty yojanas across with refreshing, clear, and unpolluted water. It has a stone wall made of seven treasures, seven balustrades, seven nettings, and seven rows of trees with all sorts of colors that are made of the seven treasures.
 {:#p62}
@@ -301,7 +302,7 @@ There’s another forest named Grape that’s fifty yojanas across.
 68\. “In the palace of Anavatapta, there is a hall with five pillars where the Nāga King Anavatapta always lives.”
 {:#p68}
 
-#### The Meaning of “Anavatapta”
+##### The Meaning of “Anavatapta”
 
 69\. The Buddha said, “Why is it called Anavatapta? What’s the meaning of ‘Anavatapta’? Here in Jambudvīpa, there’s a nāga king who stopped having three troubles. Only the nāga Anavatapta has none of these three troubles. What are the three?
 {:#p69}
@@ -321,7 +322,7 @@ There’s another forest named Grape that’s fifty yojanas across.
 74\. The Buddha told the monks, “On the right side of Mount Himavat, there’s a city named Vaiśālī. That city has seven black mountains to its north. North of those seven black mountains, there’s a fragrance mountain. There are always sounds of music and singing at that mountain. It has two caves: One is called Painted and the second is called Skillfully Painted.[\[5\]](#n5){:#ref5} They’re made of seven heavenly treasures that are soft and pleasant smelling like heavenly cloth. The Gandharva King Sarasvatī lives there with 500 gandharvas.
 {:#p74}
 
-#### The Elephant King Susaṃsthita
+##### The Elephant King Susaṃsthita
 
 75\. “North of the caves Painted and Skillfully Painted is a sal tree king named Susaṃsthita. It’s surrounded on four sides by 8,000 other tree kings. An elephant king lives under the tree king Susaṃsthita that’s also named Susaṃsthita. His body is all white, he stands flush in seven places, and he has the ability to fly. His head is red and his hair is multicolored. His six tusks are delicate, and there’s gold between them. He’s surrounded by 8,000 elephants that follow him. Those 8,000 elephants live under the 8,000 other tree kings in the same way.
 {:#p75}
