--- a/01_agama/dirgha/DA_30-10.md
+++ b/01_agama/dirgha/DA_30-10.md
@@ -8,9 +8,10 @@ next: DA_30-11.html
 ---
 
 # [The Long Discourses](index.html)
-## 30. Description of the World
-### Chapter 10: War
-#### Vemacitrin’s Bonds
+## Part IV
+### 30. Description of the World
+#### Chapter 10: War
+##### Vemacitrin’s Bonds
 
 1\. The Buddha told the monks,[\[1\]](#n1){:#ref1} “Once, the gods and asuras went to war. At the time, Śakra the Lord of Gods gave the Trāyastriṃśa gods this order: ‘All of you, go and do battle with them. If you are victorious, tie up the asura Vemacitrin with five bonds and bring him to the Sudharma Meeting Hall. I want to look at him.’ Accepting Lord Śakra’s instructions, the Trāyastriṃśa gods equipped themselves [with armor and weapons].
 {:#p1}
@@ -33,7 +34,7 @@ next: DA_30-11.html
 7\. “Something that has a self would be conditioned, and something that has no self would be conditioned. Something with form is conditioned, and something without form is conditioned. Something with and without form is conditioned. Something with conception is conditioned, and something without conception is conditioned. Something with and without conception is conditioned. Something that’s conditioned is a great trouble, an abscess, and a thorn. Therefore, a noble disciple abandons being conditioned and practices to be unconditioned.”
 {:#p7}
 
-#### Śakra Tolerates Vemacitrin’s Insults
+##### Śakra Tolerates Vemacitrin’s Insults
 
 8\. The Buddha told the monks, “Once, the gods and asuras went to war. At the time, Śakra the Lord of Gods gave the Trāyastriṃśa gods this order: ‘All of you, go and do battle with them. If you are victorious, tie up the asura Vemacitrin with five bonds and bring him to the Sudharma Meeting Hall. I want to look at him.’ Accepting Lord Śakra’s instructions, the Trāyastriṃśa gods equipped themselves [with armor and weapons].
 {:#p8}
@@ -128,7 +129,7 @@ Is a power that cannot be thwarted.’”
 18\. The Buddha told the monks, “Was Śakra the Lord of Gods another person at the time? Don’t have this view. At that time, Śakra the Lord of Gods was me. I was cultivating tolerance and not behaving violently. I was constantly praising tolerant people. If some wise person wants to set out on my path, they should cultivate patient silence and not feel animosity.”
 {:#p18}
 
-#### Defeating the Asuras with Gentle Words
+##### Defeating the Asuras with Gentle Words
 
 19\. The Buddha told the monks, “Once, the Trāyastriṃśa gods and the asuras went to war. Śakra the Lord of Gods said to the asura ’Citrin, ‘Friend, why are you equipped with weapons? Do you harbor ill-will and want to fight me? Now, I’ll have a discussion of doctrine with you to determine who wins and who loses.’
 {:#p19}
@@ -232,7 +233,7 @@ Is a power that cannot be thwarted.’
 34\. The Buddha told the monks, “Was Śakra the Lord of Gods another person at the time? Don’t have this view. Why is that? [Śakra the Lord of Gods] was me. That time, I defeated the host of asuras with gentle words.”
 {:#p34}
 
-#### Defeating the Asuras with Compassion
+##### Defeating the Asuras with Compassion
 
 35\. The Buddha told the monks, “Once, the gods and asuras again went to war. That time, the asuras were the victors, and the gods weren’t their equal.
 {:#p35}
@@ -251,12 +252,12 @@ Don’t injure those two birds!’
 38\. The Buddha told the monks, “Was Lord Śakra another person at the time? Don’t have that view. Why is that? [Śakra the Lord of Gods] was me. That time, I was engendering compassion for sentient beings. Monks, you’ve left home to cultivate the path in my teaching. You ought to engender compassion and sympathy for all beings.”
 {:#p38}
 
-#### Śakra’s Victory Hall
+##### Śakra’s Victory Hall
 
 39\. The Buddha told the monks, “Once, the gods and asuras went to war. That time, the gods were the victors, and the asuras retreated. Śakra the Lord of Gods returned to his palace after that victory and built a hall that he named Supremacy. It was a hundred yojanas long from east to west, and sixty yojanas wide from north to south. That hall had a hundred rooms, and the rooms had seven curtained balconies. There were seven beautiful women on each balcony, and each beautiful woman had seven servants. Śakra the Lord of Gods didn’t withhold from those beautiful women any supplies of clothing, meals, or ornaments. He received these fortunes as a result of his past deeds. Being victorious in battle against the asuras, he rejoiced and built this hall, so it was called the Hall of Supremacy. No other hall was comparable to it in a thousand worlds, so it was called Supremacy.”
 {:#p39}
 
-#### Desire Is the Cause of Warfare
+##### Desire Is the Cause of Warfare
 
 40\. The Buddha told the monks, “Once the Asura [King Rāhu] thought to himself, ‘I have great authority, and my miraculous powers aren’t few, but the Trāyastriṃśa, sun, and moon gods are always in the sky roaming around my summit freely. Now, I think I’ll take the sun and the moon and make them into earrings so I could travel freely!’
 {:#p40}
