--- a/01_agama/dirgha/DA_30-11.md
+++ b/01_agama/dirgha/DA_30-11.md
@@ -8,13 +8,14 @@ next: DA_30-12.html
 ---
 
 # [The Long Discourses](index.html)
-## 30. Description of the World
-### Chapter 11: Three Interim Eons
+## Part IV
+### 30. Description of the World
+#### Chapter 11: Three Interim Eons
 
 1\. The Buddha told the monks,[\[1\]](#n1){:#ref1} “There are three interim eons. What are the three? The first is called the eon of warfare, the second is called the eon of famine, and the third is called the eon of plague.
 {:#p1}
 
-#### The Eon of Warfare
+##### The Eon of Warfare
 
 2\. “What is the eon of warfare? The people of this world originally lived for 40,000 years. After that, their life spans were reduced to 20,000 years. After that, their life spans were reduced further to 10,000 years. Their life spans became 1,000 years … 500 years … 300 years … 200 years until today when few people live for more than 100 years, and many live for less. After that, people’s life spans are reduced to ten years. At that point, woman are married at five months old.
 {:#p2}
@@ -52,7 +53,7 @@ next: DA_30-12.html
 13\. “After their bodies break up and their lives end, those people fall to hell. Why is that? They had always harbored anger and malice toward each other, so it was because of their lack of humanity. This is eon of warfare.”
 {:#p13}
 
-#### The Eon of Famine
+##### The Eon of Famine
 
 14\. The Buddha told the monks, “What is the eon of famine? In that time, people often behave contrary to the Dharma. Deluded by wrong views, they commit the ten bad deeds. Because they do evil, no rain falls from the heavens. The hundred grasses wither and die, and the five grains aren’t harvested, only stalks and straw.
 {:#p14}
@@ -72,7 +73,7 @@ next: DA_30-12.html
 19\. “In that time, sentient beings fall to the hungry ghosts when their bodies break up and their lives end. Why is that? It’s because those people always harbored greediness during the eon of famine. Having no focus on generosity, they are unwilling to share [their food] and aren’t mindful of other people’s hardships. This is the eon of famine.”
 {:#p19}
 
-#### The Eon of Plague
+##### The Eon of Plague
 
 20\. The Buddha told the monks, “What is the eon of plague? In that time, the world’s people cultivate the correct Dharma, have right view, don’t have deluded views, and perfect the ten good deeds. A yakṣa spirit comes from another world, and the yakṣa spirits in this world are reckless and lustful, so they can’t protect the people here. The yakṣa spirit from another world then attacks and disturbs this world’s people. It hits, whips, and steals their vitality. Disturbing people’s minds, it drives and threatens them as it leads them away.
 {:#p20}
