--- a/01_agama/dirgha/DA_30-12.md
+++ b/01_agama/dirgha/DA_30-12.md
@@ -8,9 +8,10 @@ next: index.html
 ---
 
 # [The Long Discourses](index.html)
-## 30. Description of the World
-### Chapter 12: The Origins of the World
-#### The Repopulation of the World
+## Part IV
+### 30. Description of the World
+#### Chapter 12: The Origins of the World
+##### The Repopulation of the World
 
 1\. The Buddha told the monks,[\[1\]](#n1){:#ref1} “After the catastrophe of fire has passed and the earth and heavens of this world are about to reform, the remaining sentient beings’ merits, actions, and lives come to an end. At the end of their lives in the Ābhāsvara Heaven, they are born into an empty Brahma abode. Their minds are stained by attachment to the place. Delighted by that abode, they wish other sentient beings would be born there with them. After they make that wish, the merits, actions, and lives of other sentient beings come to an end. When their bodies break up and their lives end in the Ābhāsvara Heaven, they’re born in that empty Brahma abode.
 {:#p1}
@@ -42,7 +43,7 @@ next: index.html
 10\. “The bodies of these sentient beings become rough, and their glow gradually disappears. They no longer have the miraculous ability to fly, either. At that point, there has yet to be a sun or moon, so when the glow of the sentient beings goes out, the world is plunged into a darkness that’s no different than before.
 {:#p10}
 
-#### The Sun
+##### The Sun
 
 11\. “A long, long time after that, a windstorm blows on the ocean’s water, which is 84,000 yojanas deep. It divides into two whirlwinds that grab the palace hall of the sun and place it half as high as Mount Sumeru, where it takes up the sun’s orbit. It rises in the east and sets in the west, revolving around the world.
 {:#p11}
@@ -106,7 +107,7 @@ next: index.html
 30\. “Sixty kṣaṇas are called a lava. Thirty lavas are called a muhūrta. A hundred muhūrtas are called an upamā.[\[3\]](#n3){:#ref3} The sun palace moves south for six months. The sun moves fifteen kilometers to the south, not going beyond Jambudvīpa. The sun travels north in the same way.
 {:#p30}
 
-#### Ten Reasons Sunlight Is Hot
+##### Ten Reasons Sunlight Is Hot
 
 31\. “What are the reasons for sunlight to be hot? There are ten causes for this. What are the ten? First, Mount Khadiraka outside of Mount Sumeru is 42,000 yojanas tall and 42,000 yojanas across. Its bounds are measureless, and it’s made of the seven treasures. The sun’s light shines on that mountain, and it creates heat when they come into contact. This is one reason for sunlight to be hot.
 {:#p31}
@@ -146,7 +147,7 @@ The sun is called a thousand lights.\\
 Its light is fiery and hot,\\
 As described by the Buddha sun.”
 
-#### Thirteen Reasons for Cold Weather in Sunlight
+##### Thirteen Reasons for Cold Weather in Sunlight
 
 42\. The Buddha told the monks, “Why is the sun palace cold and distant during winter, and the weather is freezing even with light? There are thirteen reasons that it’s freezing even with light. What are the thirteen? First, there’s a lake between Mount Sumeru and Mount Khadiraka that’s 84,000 yojanas wide. Its circumference is measureless, and various flowers grow in its water, such as utpala, kumuda, padma, puṇḍarīka, and sugandha flowers. When the sun’s light shines on it, it becomes cold on contact. This is the first reason for sunlight to be cold.
 {:#p42}
@@ -195,7 +196,7 @@ The sun is called a thousand lights.\\
 Its light is refreshing and cool,\\
 As described by the Buddha sun.”
 
-#### The Moon
+##### The Moon
 
 56\. The Buddha told the monks, “There are times when the moon palace’s round form waxes and wanes, and its light decreases and disappears. Therefore, the moon palace is named for its reduction. ‘Moon’ has two meanings. The first is to abide in eternal liberation. The second is the palace hall.
 {:#p56}
@@ -236,7 +237,7 @@ As described by the Buddha sun.”
 68\. “Sixty kṣaṇas are called a lava. Thirty lavas are called a muhūrta. A hundred muhūrtas are called an upamā. The sun palace moves south for six months. The sun moves fifteen kilometers to the south, not going beyond Jambudvīpa. The moon palace then moves south for half a year, not going beyond Jambudvīpa. The moon travels north in the same way.
 {:#p68}
 
-#### The Waxing and Waning of the Moon
+##### The Waxing and Waning of the Moon
 
 69\. “What’s the reason the moon palace gradually decreases and disappears? There are three causes for the moon palace to decrease and disappear. First is when the moon rises diagonally.[\[4\]](#n4){:#ref4} This is the first reason the moon decreases and disappears.
 {:#p69}
@@ -262,7 +263,7 @@ As described by the Buddha sun.”
 76\. The Buddha told the monks, “One’s mind should be like the moon, clear and unheated. When going to a donor’s home, be mindful and unconfused.
 {:#p76}
 
-#### Other Features of the World
+##### Other Features of the World
 
 77\. “Again, what’s reason for the great rivers to exist? It’s because the sun and moon have heat. That heat causes hot [weather]. Hot weather causes sweating. The sweat forms large rivers, so the world has great rivers.
 {:#p77}
@@ -285,7 +286,7 @@ As described by the Buddha sun.”
 83\. “North of the seven great countries, there are seven great black mountains. The first is Bare Land, second is White Stork, third is Palace Protector, fourth is Sage Mountain, fifth is High Mountain, sixth is Dhyāna Mountain, and seventh is Land Mountain. On these seven black mountains, there are seven priestly sages. These seven sages who live on them are named Good Lord, Good Light, Palace Protector, Sage, Palace Defender, Gaṇana, and Increase.”[\[6\]](#n6){:#ref6}
 {:#p83}
 
-#### The Devolution of Sentient Beings
+##### The Devolution of Sentient Beings
 
 84\. The Buddha told the monks, “The first sentient beings of the eon eat the flavor of the earth, and they live in the world for a long time. Those that often eat it become cruder in appearance, and those that seldom eat it are shiny in appearance. After a while, they notice that the appearance of the other sentient beings has become superior or inferior, and they argue with each other. ‘I am superior to you! You are not my equal!’ Self and other enter their minds. Because they maintain grudges, the earth flavor dries up.
 {:#p84}
@@ -302,7 +303,7 @@ As described by the Buddha sun.”
 88\. “After that, there’s spontaneous rice that lacks any chaff or husks, doesn’t need to be seasoned, and possesses many delicious flavors. At that point, the sentient beings gather and say, ‘Oh, what a disaster! The earth skin is nowhere to be found now!’ They are like present-day people who encounter some unfortunate difficulty and exclaim, ‘What a pain!’ Those sentient beings likewise feel miserable and sigh.
 {:#p88}
 
-#### Families and Homes Arise
+##### Families and Homes Arise
 
 89\. “After that, the sentient beings take the rice and eat it, and their bodies become uglier, having male and female forms. They look at each other and chase after notions of desire. They go to private places together and do impure things. Other sentient beings that see them say, ‘Oh, this is wrong! How can those sentient beings go and do such things together?’ They go to the impure males and rebuke them, telling them to repent their mistake. ‘What you did was wrong!’ Then, they throw them to the ground.
 {:#p89}
@@ -319,7 +320,7 @@ As described by the Buddha sun.”
 93\. “After that, sentient beings increasingly indulge in lust, and they seek to become husband and wife. The life span, conduct, and merits of other sentient beings in the Ābhāsvara Heaven come to an end. When their lives end, they’re reborn here in a mother’s womb. As a result, the term ‘womb’ comes to exist in the world.
 {:#p93}
 
-#### Cities Are Built and Property Is Invented
+##### Cities Are Built and Property Is Invented
 
 94\. “At that point, the city of Campā is built. Next, the city of Kāśi is built, and then the city of Rājagṛha is built. They begin building them when the sun rises and complete them when the sun rises. As a result, the world has the names of large cities and districts that are governed by kings.
 {:#p94}
@@ -364,7 +365,7 @@ As described by the Buddha sun.”
 106\. “‘Then, spontaneous rice grew, and its color, aroma, and flavor were perfect. Again, we took and ate it. When we gathered it in the morning, it was ripe again by evening. When we gathered it in the evening, and it was ripe again by morning. We would gather it, and it would grow back when we didn’t store what we gathered. It grew chaff and husks when we competed with each other’s stockpiles, and then it didn’t grow back when we gathered it. It turned to withered stalks. Now, we ought to assign fields to houses and make boundaries between the fields.’ They then divide the land into different demarcated fields and assign them to others and themselves.
 {:#p106}
 
-#### Law and Crime Are Invented
+##### Law and Crime Are Invented
 
 107\. “After that, one of them proceeds to store their own rice and steal from other’s fields. When other sentient beings see this, they say, ‘You are a wrongdoer! You are a wrongdoer! Why are you stealing other’s property when you have your own stores and things?’ Then they rebuke them, ‘Don’t ever do that again!’
 {:#p107}
@@ -383,7 +384,7 @@ As described by the Buddha sun.”
 111\. “Those people listened to him and accepted him as their chief who would reward what should be rewarded and punish what should be punished. It’s then that the name ‘chief of the people’ first comes to be.
 {:#p111}
 
-#### The Lineages of Kings
+##### The Lineages of Kings
 
 112\. “The first chief of the people had a son named Treasure.[\[7\]](#n7){:#ref7} Treasure had a son name Superb Flavor. Superb Flavor had a son named Tranquil Purification. Tranquil Purification had a son named Born from the Crown. Born from the Crown had a son named Good Conduct. Good Conduct had a son named Household Conduct. Household Conduct had a son named Wonderful Flavor. Wonderful Flavor had a son named Lord of Flavor. Lord of Flavor had a son named Water Sage. Water Sage had a son named Hundred Knowledge. Hundred Knowledge had a son named Fondness. Fondness had a son named Good Desire. Good Desire had a son named Cutting Bonds. Cutting Bonds had a son named Great Cutting Bonds. Great Cutting Bonds had a son named Treasure Trove. Treasure Trove had a son named Sudarśana. Sudarśana had a son named Aśoka. Aśoka had a son named Island. Island had a son named Planted Life. Planted Life had a son named Hill. Hill had a son named Spirit God. Spirit God had a son named Bestowing Power. Bestowing Power had a son named Solid Cart. Solid Cart had a son named Ten Carts. Ten Carts had a son named Hundred Carts. Hundred Carts had a son named Solid Bow. Solid Bow had a son named Hundred Bows. Hundred Bows had a son named Nurturance. Nurturance had a son named Good Intent.
 {:#p112}
@@ -397,7 +398,7 @@ As described by the Buddha sun.”
 115\. “That Ikṣvāku king had a son named Aurava (?). Aurava had a son named Gaurava (?). Gaurava had a son named Nipura. Nipura had a son named Siṃhahanu. Siṃhahanu had a son named King Śuddhodana. King Śuddhodana had a son named Bodhisattva. Bodhisattva had a son named Rāhula. As a result of this history, the name ‘kṣatriya’ came to be.
 {:#p115}
 
-#### The Origins of the Four Castes
+##### The Origins of the Four Castes
 
 116\. “At that point, there’s a sentient being who thinks, ‘The homes, families, and various things in the world are all thorns and sores. It would be good to seclude myself from it now. I’ll go to the mountains and practice the path in quietude and contemplation.’
 {:#p116}
@@ -423,7 +424,7 @@ As described by the Buddha sun.”
 123\. “They then abandoned their homes, cut off their hair and beards, put on Dharma robes, and sought the path. [They said,] ‘I am an ascetic! I am an ascetic!’
 {:#p123}
 
-#### The Arising of Arhats in the World
+##### The Arising of Arhats in the World
 
 124\. “Suppose the physical conduct, verbal conduct, and mental conduct of someone in the warrior assembly isn’t good. After they do things that aren’t good, their bodies break up and their lives end, and they only experience suffering. Suppose the physical conduct, verbal conduct, and mental conduct of someone in the priestly assembly, householder assembly, or worker assembly isn’t good. After they do things that aren’t good, their bodies break up and their lives end, and they only experience suffering.
 {:#p124}
