--- a/01_agama/dirgha/DA_30-3.md
+++ b/01_agama/dirgha/DA_30-3.md
@@ -8,8 +8,9 @@ next: DA_30-4.html
 ---
 
 # [The Long Discourses](index.html)
-## 30. Description of the World
-### Chapter 3: Noble Wheel-Turning Kings
+## Part IV
+### 30. Description of the World
+#### Chapter 3: Noble Wheel-Turning Kings
 
 1\. The Buddha told the monks,[\[1\]](#n1){:#ref1} “The world has noble wheel-turning kings who achieve seven treasures and possess four miraculous virtues.
 {:#p1}
@@ -17,7 +18,7 @@ next: DA_30-4.html
 2\. “What are the seven treasures achieved by a noble wheel-turning king? First is the golden wheel treasure, second is the white elephant treasure, third is the blue horse treasure, fourth is the magic jewel treasure, fifth is the beautiful woman treasure, sixth is the householder treasure, and seventh is the army general treasure.
 {:#p2}
 
-#### The Golden Wheel Treasure
+##### The Golden Wheel Treasure
 
 3\. “How does a noble wheel-turning king achieve the golden wheel treasure? If a noble wheel-turning king arises in Jambudvīpa, he’ll be a water-anointed warrior [king]. During the fifteenth-day full moon, he’ll bathe in a fragrant wash, ascend to his high hall, and entertain himself with a group of maidens. The wheel will spontaneously appear before him. It has a thousand spokes and possesses a glowing light. It’s something made by a heavenly artisan, not something made in this world. It is made of pure gold and about fourteen feet in diameter.
 {:#p3}
@@ -46,7 +47,7 @@ next: DA_30-4.html
 11\. “After it’s built, the golden wheel treasure will go up into the sky and hover above the palace hall, complete and unmoving. The noble wheel-turning king will celebrate, ‘This golden wheel treasure is a true sign to me that I really am a noble wheel-turning king now!’ This is his accomplishment of the golden wheel treasure.
 {:#p11}
 
-#### The White Elephant Treasure
+##### The White Elephant Treasure
 
 12\. “How does he accomplish the white elephant treasure? The noble wheel-turning king will be sitting up in his correct [Dharma] hall in the morning, and the elephant treasure will suddenly appear before him. Its hair is all white, stands flush in seven places, and has the ability to fly. Its head is mottled, and its six tusks are delicate and have real gold between them.
 {:#p12}
@@ -57,7 +58,7 @@ next: DA_30-4.html
 14\. “The wheel-turning king will celebrate, ‘This white elephant treasure is a true sign to me that I really am a noble wheel-turning king now!’ This is his accomplishment of the elephant treasure.
 {:#p14}
 
-#### The Blue Horse Treasure
+##### The Blue Horse Treasure
 
 15\. “How does the noble wheel-turning king accomplish the blue horse treasure? The noble wheel-turning king will be sitting up in his correct [Dharma] hall in the morning, and the horse treasure will suddenly appear before him. It’s dark blue in color with a vermillion mane and tail. It’s head and neck are like an elephant’s and has the ability to fly.
 {:#p15}
@@ -68,7 +69,7 @@ next: DA_30-4.html
 17\. “The wheel-turning king will celebrate, ‘This blue horse treasure is a true sign to me that I really am a noble wheel-turning king now!’ This is his accomplishment of the blue horse treasure.
 {:#p17}
 
-#### The Magic Jewel Treasure
+##### The Magic Jewel Treasure
 
 18\. “How does he accomplish the magic jewel treasure? The noble wheel-turning king will be sitting up in his correct [Dharma] hall in the morning, and the magic jewel treasure will suddenly appear before him. It’s substance and color are transparent and lacks any flaws or defilement.
 {:#p18}
@@ -79,7 +80,7 @@ next: DA_30-4.html
 20\. “The noble wheel-turning king will celebrate, ‘This magic jewel is a true sign to me that I really am a noble wheel-turning king now!’ This is his accomplishment of the magic jewel treasure.
 {:#p20}
 
-#### The Beautiful Woman Treasure
+##### The Beautiful Woman Treasure
 
 21\. “How does he accomplish the beautiful woman treasure? The beautiful woman treasure will suddenly appear [before him]. Her countenance is agreeable, and her appearance is handsome. She isn’t too tall or short, too crude or fine, too white or black, or too sharp or gentle. In winter, her body is warm, and she’s cool during summer. The hair pores of her whole body exude the scent of sandalwood, and her breath has the fragrance of an utpala flower. Her words are gentle, stimulating, and calm. She’s the first to rise and the last to sit. She doesn’t do anything inappropriate. The noble wheel-turning king isn’t attached to seeing her, so he doesn’t think about her for a moment, much less being intimate with her.
 {:#p21}
@@ -87,7 +88,7 @@ next: DA_30-4.html
 22\. “After seeing her, the noble wheel-turning king will celebrate, ‘This beautiful woman treasure is a true sign to me that I really am a noble wheel-turning king now!’ This is his accomplishment of the beautiful woman treasure.
 {:#p22}
 
-#### The Householder Treasure
+##### The Householder Treasure
 
 23\. “How does he accomplish the householder treasure? A householder man will suddenly appear with a natural storehouse of treasures and measureless wealth. The householder will have an eye from past merit that clearly sees hidden treasures in the earth and whether they have owners or not. He sees and knows all this. When the treasure has an owner, he will protect it for them. When a treasure doesn’t have an owner, he will collect it and provide it for the king’s use. The householder treasure goes to the King and says, ‘Great King, you don’t need to worry about paying me a salary. I can take care of myself.’
 {:#p23}
@@ -110,7 +111,7 @@ next: DA_30-4.html
 27\. “The noble wheel-turning king will celebrate, ‘This householder treasure is a true sign to me that I really am a noble wheel-turning king now!’ This is his accomplishment of the householder treasure.
 {:#p27}
 
-#### The Army General Treasure
+##### The Army General Treasure
 
 28\. “How does he accomplish the army general treasure? The army general treasure will suddenly appear [before him]. He’s shrewd, courageous, and good at planning. He goes to the king and says, ‘Great King, if there’s anyone you need defeated, don’t worry about it. I can handle it for him.’
 {:#p28}
@@ -124,12 +125,12 @@ next: DA_30-4.html
 31\. “When he sees this, the noble wheel-turning king will celebrate, ‘This army general treasure is a true sign to me that I really am a noble wheel-turning king now!’ This is the noble wheel-turning king’s accomplishment of the seven treasures.
 {:#p31}
 
-#### The Four Miraculous Virtues
+##### The Four Miraculous Virtues
 
 32\. “What are his four miraculous virtues? First is a long life that’s incomparable and isn’t cut short. Second is physical vigor that’s incomparable and tireless. Third is a handsome appearance that’s incomparable. Fourth is a treasury that’s incomparable and overflowing. These are the seven treasures and four virtues accomplished by a noble wheel-turning king.
 {:#p32}
 
-#### The Way the Noble King Rules
+##### The Way the Noble King Rules
 
 33\. “After a long time, the noble wheel-turning king will order his horses readied and go out for a ride to visit his park. He tells the driver, ‘Be a good driver, and go at a calm pace. Why is that? I want to closely observe the country and see that the people are happy and untroubled.’
 {:#p33}
@@ -143,7 +144,7 @@ next: DA_30-4.html
 36\. “But the king says, ‘Stop, people! I have my own treasures. You can use these for yourselves.’
 {:#p36}
 
-#### The Transformation of the Land
+##### The Transformation of the Land
 
 37\. “When a noble wheel-turning king governs Jambudvīpa, the land is level without any brambles, gullies, or hills, nor does it have biting insects, scorpions, stinging insects, venomous snakes, and other dangerous animals. The stones, sand, and rocks naturally disappear, and gold, silver, and jewels appear on the ground. The seasons are mild, being neither cold nor hot. The ground is soft and lacks any dust or dirt. As though coated with oil, it’s pure and glistening without any dust or dirt.
 {:#p37}
@@ -181,7 +182,7 @@ next: DA_30-4.html
 48\. “When the noble [wheel-turning] king governs [the world], Jambudvīpa is bountiful with the five grains, the people prosper, and their wealth is abundant. No one wants for anything.
 {:#p48}
 
-#### The End of a Noble Wheel-Turning King’s Life
+##### The End of a Noble Wheel-Turning King’s Life
 
 49\. “When a noble wheel-turning king properly governs the land in future times, he’ll do so without crookedness and practice the ten good deeds. The people in that time will also cultivate right view and the ten good deeds. The king will live for a long time until his body becomes seriously diseased. When he reaches the end of his life, he’ll be like a happy person who ate a little too much and feels a bit unwell. When his life ends, he’ll be born up in the Brahma Heaven. The beautiful woman treasure, householder treasure, army general treasure, and the people of the land will sing and play music when they inter the noble [wheel-turning] king’s body.
 {:#p49}
