--- a/01_agama/dirgha/DA_30-4.md
+++ b/01_agama/dirgha/DA_30-4.md
@@ -8,9 +8,10 @@ next: DA_30-5.html
 ---
 
 # [The Long Discourses](index.html)
-## 30. Description of the World
-### Chapter 4: The Hells
-#### The Eight Great Hells
+## Part IV
+### 30. Description of the World
+#### Chapter 4: The Hells
+##### The Eight Great Hells
 
 1\. The Buddha told the monks,[\[1\]](#n1){:#ref1} “There are 8,000 islands that surround the four continents. There’s also a great ocean that completely encircles those 8,000 islands, and a chain of great diamond mountains encircles that ocean. Beyond those diamond mountains, there’s a second chain of great diamond mountains. There’s an utter darkness between those two mountain chains, where the great illuminating power of the sun and moon gods doesn’t reach.
 {:#p1}
@@ -18,7 +19,7 @@ next: DA_30-5.html
 2\. “There are eight great hells there, and each of those hells has sixteen lesser hells. The first great hell is called \*Saṃjñā. The second is called Kālasūtra. The third is called \*Saṃhata. The fourth is called \*Roravaṇa. The fifth is called \*Mahāroravaṇa. The sixth is called Tapana. The seventh is called Mahātapana. The eighth is called Avīci.[\[2\]](#n2){:#ref2}
 {:#p2}
 
-#### The Great Hell of \*Saṃjñā
+##### The Great Hell of \*Saṃjñā
 
 3\. “The \*Saṃjñā Hell has sixteen lesser hells. These lesser hells are 500 yojanas across. The first lesser hell is called Black Sand. The second is called Boiling Excrement. The third is called Five Hundred Nails. The fourth is called Hunger. The fifth is called Thirst. The sixth is called Copper Cauldron. The seventh is called Many Copper Cauldrons. The eighth is called Grinding Stone. The ninth is called Pus and Blood. The tenth is called Measuring Fire. The eleventh is called River of Ash. The twelfth is called Iron Ball. The thirteenth is called Axes. The fourteenth is called Wolves. The fifteenth is called Sword Trees. The sixteenth is called Frozen Ice.[\[3\]](#n3){:#ref3}
 {:#p3}
@@ -38,7 +39,7 @@ next: DA_30-5.html
 8\. “Furthermore, the sentient beings in that \*Saṃjñā Hell harbor harmful notions and attack each other. Holding small swords in their hands that have sharp points, they chop and stab each other, slicing and cutting until they perceive, ‘I’m dead.’ A cool breeze blows over them that restores their skin and flesh. Quickly healed, they stand back up and say to themselves, ‘I’m alive again!’ The other sentient beings say, ‘I perceive that you are alive!’ Because of these circumstances, it’s called the \*Saṃjñā Hell.
 {:#p8}
 
-#### The Lesser Hell of Black Sand
+##### The Lesser Hell of Black Sand
 
 9\. “After experiencing this punishment for a long time, those sentient beings escape the \*Saṃjñā Hell. They run in confusion trying to save themselves from the prison of their past misdeeds, but they inadvertently arrive at the Black Sand Hell.
 {:#p9}
@@ -46,7 +47,7 @@ next: DA_30-5.html
 10\. “A fierce and hot wind rises there that blows hot black sand. It sticks to the sentient beings and makes their whole bodies black as a dark cloud. That hot sand also burns their skin and all their flesh down to their bones. A black torch arises from those sinners, and it circles round and round them before returning to their bodies. This makes them suffer as they’re burnt to a crisp. They experience these pains because of their misdeeds, but their punishment isn’t done yet, so they’re prevented from dying.
 {:#p10}
 
-#### The Lesser Hell of Boiling Excrement
+##### The Lesser Hell of Boiling Excrement
 
 11\. “After experiencing these pains for a long time, those sentient beings escape the Black Sand Hell. They run in confusion trying to save themselves from the prison of their past misdeeds, but they inadvertently arrive at the Boiling Excrement Hell.
 {:#p11}
@@ -54,7 +55,7 @@ next: DA_30-5.html
 12\. “That hell is spontaneously filled with boiling excrement and iron balls. The sinners are forced to embrace the iron balls, which burn their bodies and hands up to their heads. No part of them isn’t covered by it. They’re made to feel around, pick it up, and put it into their mouths, which burns their tongue and gums. From their throat, it continues to their stomach and passes down through them. No part of them isn’t burned by it. There are iron fanged serpents that bite them, too. They eat their skin and flesh down to their bones and into their marrow. The pain is bitter and extreme, and their sorrow is measureless. Their punishment isn’t done yet, so they still don’t die.
 {:#p12}
 
-#### The Lesser Hell of Iron Nails
+##### The Lesser Hell of Iron Nails
 
 13\. “After experiencing these pains for a long time, they escape the Boiling Excrement Hell. They run in confusion trying to save themselves from the prison of their past misdeeds, but they [inadvertently] arrive at the Iron Nails Hell.
 {:#p13}
@@ -62,7 +63,7 @@ next: DA_30-5.html
 14\. “Upon arriving, they fall into that hell and land on burning iron, which is then wrapped around their body. Their hands, feet, and heart are nailed all around with a total of 500 iron spikes. The pain is bitter and extreme, and they cry out and wail. Their punishment isn’t done yet, so they still don’t die.
 {:#p14}
 
-#### The Lesser Hell of Hunger
+##### The Lesser Hell of Hunger
 
 15\. “After experiencing these pains for a long time, they escape the Iron Nails Hell. They run in confusion trying to save themselves [from the prison of their past misdeeds, but they inadvertently] arrive at the Hunger Hell.
 {:#p15}
@@ -75,7 +76,7 @@ next: DA_30-5.html
 17\. “The wardens then grab them and wrap their body in hot iron. They then force their mouth open with iron forceps and put a hot iron ball into it. It burns their gums and tongue. From their throat to their stomach, the iron ball passes down through them. No part of them isn’t burned to a crisp. The pain is bitter and extreme, and they cry and wail. Their punishment isn’t done yet, so they still don’t die.
 {:#p17}
 
-#### The Lesser Hell of Thirst
+##### The Lesser Hell of Thirst
 
 18\. “After experiencing these pains for a long time, they escape the Hunger Hell. They run in confusion trying to save themselves [from the prison of their past misdeeds, but they inadvertently] arrive at the Thirst Hell.
 {:#p18}
@@ -88,7 +89,7 @@ next: DA_30-5.html
 20\. “The wardens grab them and wrap their body in hot iron. They then force their mouth open with hot iron forceps and pour molten copper into it. It burns their gums and tongue. From their throat to their stomach, the copper burns down through them. No part of them isn’t burned to a crisp. The pain is bitter and extreme, and they cry and wail. Their punishment isn’t done yet, so they still don’t die.
 {:#p20}
 
-#### The Lesser Hell of the Copper Cauldron
+##### The Lesser Hell of the Copper Cauldron
 
 21\. “After experiencing these pains for a long time, they escape the Thirst Hell. They run in confusion trying to save themselves from the prison of their past misdeeds, but they inadvertently arrive at the Copper Cauldron Hell.
 {:#p21}
@@ -96,7 +97,7 @@ next: DA_30-5.html
 22\. “The wardens there glare angrily at the sinner, grab them by their feet, and put them into the cauldron headfirst. They’re stirred in boiling water, flowing up, down, and all around. They might go from the bottom to the top, the top to the bottom, or stay in the belly of the cauldron as their body cooks. They’re like beans being stirred in boiling water, flowing up, down, and all around. Once they are thoroughly cooked, they disintegrate. The sinner in that cauldron goes up and down as they are boiled in the same way. They cry out and wail, being subjected to a multitude of pains. Their punishment isn’t done yet, so they still don’t die.
 {:#p22}
 
-#### The Lesser Hell of Many Copper Cauldrons
+##### The Lesser Hell of Many Copper Cauldrons
 
 23\. “After experiencing these pains for a long time, they escape the Copper Cauldron Hell. They run in confusion trying to save themselves from the prison of their past misdeeds, but they inadvertently arrive at the Many Copper Cauldrons Hell.
 {:#p23}
@@ -107,7 +108,7 @@ next: DA_30-5.html
 25\. “Sometimes a hand or foot appears in the cauldron, a thigh or belly appears, or a head or face appears. The wardens use iron hooks to pick them out and put them in the other cauldrons. They cry out and wail, the pain is so bitter and extreme. Their punishment isn’t done yet, so they still don’t die.
 {:#p25}
 
-#### The Lesser Hell of Grinding Stones
+##### The Lesser Hell of Grinding Stones
 
 26\. “After experiencing these pains for a long time, they escape the Many Copper Cauldrons Hell. They run in confusion trying to save themselves from the prison of their past misdeeds, but they inadvertently arrive at the Grinding Stone Hell.
 {:#p26}
@@ -115,7 +116,7 @@ next: DA_30-5.html
 27\. “The Grinding Stone Hell is 500 yojanas across. The wardens there are wrathful. They grab the sinner and slam them on hot stones. Their hands and feet are stretched out, and the wardens crush their body with an extremely hot stone. They turn and grind it into the sinner until their bones and flesh are pulverized and their blood flows out. The pain of their injuries is excruciating, and they cry out and wail. Their punishment isn’t done yet, so they still don’t die.
 {:#p27}
 
-#### The Lesser Hell of Pus and Blood
+##### The Lesser Hell of Pus and Blood
 
 28\. “After experiencing these pains for a long time, they escape the Grinding Stone Hell. They run in confusion trying to save themselves from the prison of their past misdeeds, but they inadvertently arrive at the Pus and Blood Hell.
 {:#p28}
@@ -123,7 +124,7 @@ next: DA_30-5.html
 29\. “That Pus and Blood Hell is 500 yojanas across. In that hell, there’s spontaneous pus and blood that wells up boiling hot. The sinner runs through it going east or west, and the boiling hot pus and blood washes over their body. Their hands, feet, and head are cooked and disintegrate. They also scoop up the pus and blood to feed themselves, and then it washes over their gums and tongue. From their throat to their stomach, it burns down through them. No part of them isn’t cooked and disintegrated. The pain is so bitter and extreme, and their many injuries are hard to endure. Their punishment isn’t done yet, so they still don’t die.
 {:#p29}
 
-#### The Lesser Hell of Measuring Fire
+##### The Lesser Hell of Measuring Fire
 
 30\. “After experiencing these pains for a long time, they escape the Pus and Blood Hell. They run in confusion trying to save themselves from the prison of their past misdeeds, but they inadvertently arrive at the Measuring Fire Hell.
 {:#p30}
@@ -131,7 +132,7 @@ next: DA_30-5.html
 31\. “The Measuring Fire Hell is 500 yojanas across. In that hell, there’s a great mass of fire that spontaneously appears in front of the sinner. That fire is blazing hot. The wardens angrily drive them forward, forcing the sinner to hold an iron ladle and measure the mass of fire. When they measure the fire, it burns their hands, feet, and the rest of their body. The pain of those burns is excruciating, and they cry out and wail. Their punishment isn’t done yet, so they still don’t die.
 {:#p31}
 
-#### The Lesser Hell of the River of Ash
+##### The Lesser Hell of the River of Ash
 
 32\. “After experiencing these pains for a long time, they escape the Measuring Fire Hell. They run in confusion trying to save themselves from the prison of their past misdeeds, but they inadvertently arrive at the River of Ash Hell.
 {:#p32}
@@ -162,7 +163,7 @@ next: DA_30-5.html
 40\. “At the top of the sword trees, iron beak birds peck their skull, break it open, and eat their brain. The pain is bitter and extreme, and they cry out and wail. Their punishment isn’t done yet, so they still don’t to die.
 {:#p40}
 
-#### The Lesser Hell of Iron Balls
+##### The Lesser Hell of Iron Balls
 
 41\. “They’re restored and get back in the River of Ash Hell, where they’re pushed up and down by the waves. Swirling around and being submerged, the iron thorns stab their body through and through. Their skin and flesh are cooked and disintegrates, and their blood flows out. When only their white bones are left floating, a cool wind blows that restores them. Imprisoned by their past misdeeds, they inadvertently arrive at the Iron Ball Hell.
 {:#p41}
@@ -170,7 +171,7 @@ next: DA_30-5.html
 42\. “The Iron Ball Hell is 500 yojanas across. After the sinner enters it, a hot iron ball spontaneously appears in front of them, and a demonic warden forces them to grab it. Their hands and feet are roasted and disintegrate, and their whole body is set on fire. They cry out in pain, being subjected to such a multitude of injuries. Their punishment isn’t done yet, so they still don’t die.
 {:#p42}
 
-#### The Lesser Hell of Axes
+##### The Lesser Hell of Axes
 
 43\. “After experiencing these pains for a long time, they escape the Iron Ball Hell. They run in confusion trying to save themselves from the prison of their past misdeeds, but they inadvertently arrive at the Axes Hell.
 {:#p43}
@@ -178,7 +179,7 @@ next: DA_30-5.html
 44\. “The Axes Hell is 500 yojanas across. After they enter that hell, the wardens there glare angrily, grab the sinner, and slam them on hot iron. They lop off their hands, feet, ears, nose, and torso with hot iron axes. The pain is so bitter and extreme, they cry out and wail. Their punishment isn’t done yet, so they still don’t die.
 {:#p44}
 
-#### The Lesser Hell of Wolves
+##### The Lesser Hell of Wolves
 
 45\. “After experiencing these pains for a long time, they escape the Axes Hell. They run in confusion trying to save themselves from the prison of their past misdeeds, but they inadvertently arrive at the Wolves Hell.
 {:#p45}
@@ -186,7 +187,7 @@ next: DA_30-5.html
 46\. “The Wolves Hell is 500 yojanas across. After they enter there, packs of wolves come to bite, chew, and devour them. Flesh falls from their bones, and their blood flows out. The pain from so many wounds makes them lament bitterly. Their punishment isn’t done yet, so they still don’t die.
 {:#p46}
 
-#### The Lesser Hell of Sword Trees
+##### The Lesser Hell of Sword Trees
 
 47\. “After experiencing these pains for a long time, they escape the Wolves Hell. They run in confusion trying to save themselves from the prison of their past misdeeds, but they inadvertently arrive at the Sword Tree Hell.
 {:#p47}
@@ -194,7 +195,7 @@ next: DA_30-5.html
 48\. “The Sword Tree Hell is 500 yojanas across. When the sinner enters the sword tree forest, a windstorm rises that blows the leaves from the sword trees, which fall on them. If the swords hit their hands, their hands are cut off. If they hit their feet, their feet are cut off. No part of their bodies and heads aren’t cut to pieces. Iron beak birds land on their heads and peck out both of their eyes. The pain from so many wounds makes them lament bitterly. Their punishment isn’t done yet, so they still don’t die.
 {:#p48}
 
-#### The Lesser Hell of Frozen Ice
+##### The Lesser Hell of Frozen Ice
 
 49\. “After experiencing these pains for a long time, they escape the Sword Tree Hell. They run in confusion trying to save themselves from the prison of their past misdeeds, but they inadvertently arrive at the Frozen Ice Hell.
 {:#p49}
@@ -202,7 +203,7 @@ next: DA_30-5.html
 50\. “The Frozen Ice Hell is 500 yojanas across. After they enter there, a great windstorm rises that blows on them. Their whole body is frostbitten, and their skin and flesh fall off. The pain is so bitter and extreme, they cry out and wail. Afterward, their life ends.”
 {:#p50}
 
-#### The Great Hell of Kālasūtra
+##### The Great Hell of Kālasūtra
 
 51\. The Buddha told the monks, “The Great Hell of Kālasūtra has sixteen lesser hells that completely encircle it. Each of them is 500 yojanas across from the Kālasūtra Hell to the Frozen Ice Hell.
 {:#p51}
@@ -225,7 +226,7 @@ next: DA_30-5.html
 57\. “After the sinner experiences these pains for a long time, they escape the Kālasūtra Hell. They run in confusion trying to save themselves from the prison of their past misdeeds, but they inadvertently arrive at the Black Sand Hell … the Frozen Ice Hell … afterward their life ends as before.”
 {:#p57}
 
-#### The Great Hell of \*Saṃhata
+##### The Great Hell of \*Saṃhata
 
 58\. The Buddha told the monks, “The Great Hell of \*Saṃhata has sixteen lesser hells that completely encircle it. Each of them is 500 yojanas across.
 {:#p58}
@@ -248,7 +249,7 @@ next: DA_30-5.html
 64\. “After the sinner experiences these pains for a long time, they escape from the \*Saṃhata Hell. They run in confusion trying to save themselves from the prison of their past misdeeds, but they inadvertently arrive at the Black Sand Hell … the Frozen Ice Hell … afterward their life ends as before.”
 {:#p64}
 
-#### The Great Hell of \*Roravaṇa
+##### The Great Hell of \*Roravaṇa
 
 65\. The Buddha told the monks, “The Great Hell of \*Roravaṇa has sixteen lesser hells that completely encircle it. Each of them is 500 yojanas across.
 {:#p65}
@@ -271,7 +272,7 @@ next: DA_30-5.html
 71\. “After experiencing these pains for a long time, they escape from the \*Roravaṇa Hell. They run in confusion trying to save themselves from the prison of their past misdeeds, but they inadvertently arrive at the Black Sand Hell … the Frozen Ice Hell … afterward their life ends as before.”
 {:#p71}
 
-#### The Great Hell of \*Mahāroravaṇa
+##### The Great Hell of \*Mahāroravaṇa
 
 72\. The Buddha told the monks, “The \*Mahāroravaṇa Hell has sixteen lesser hells that completely encircle it. [Each of them is 500 yojanas across.]
 {:#p72}
@@ -294,7 +295,7 @@ next: DA_30-5.html
 78\. “After experiencing these pains for a long time, they escape the \*Mahāroravaṇa Hell. They run in confusion trying to save themselves from the prison of their past misdeeds, but they inadvertently arrive at the Black Sand Hell … the Frozen Ice Hell … afterward their life ends as before.”
 {:#p78}
 
-#### The Great Hell of Tapana
+##### The Great Hell of Tapana
 
 79\. The Buddha told the monks, “The Great Hell of Tapana has sixteen lesser hells that encircle it. [Each of them is 500 yojanas across.]
 {:#p79}
@@ -317,7 +318,7 @@ next: DA_30-5.html
 85\. “After experiencing these pains for a long time, they escape the Tapana Hell. They run in confusion trying to save themselves from the prison of their past misdeeds, but they inadvertently arrive at the Black Sand Hell … the Frozen Ice Hell … afterward their life ends as before.”
 {:#p85}
 
-#### The Great Hell of Mahātapana
+##### The Great Hell of Mahātapana
 
 86\. The Buddha told the monks, “The Great Hell of Mahātapana has sixteen lesser hells that encircle it. Each of them is 500 yojanas across.
 {:#p86}
@@ -340,7 +341,7 @@ next: DA_30-5.html
 92\. “After experiencing these pains for a long time, they escape the Mahātapana Hell. They run in confusion trying to save themselves from the prison of their past misdeeds, but they inadvertently arrive at the Black Sand Hell … the Frozen Ice Hell … afterward their life ends as before.”
 {:#p92}
 
-#### The Great Hell Avīci
+##### The Great Hell Avīci
 
 93\. The Buddha told the monks, “The Great Hell of Avīci has sixteen lesser hells that encircle it. Each of them is 500 yojanas across.
 {:#p93}
@@ -363,7 +364,7 @@ next: DA_30-5.html
 99\. “After experiencing these pains for a long time, they escape the Avīci Hell. They run in confusion trying to save themselves from the prison of their past misdeeds, but they inadvertently arrive at the Black Sand Hell … the Frozen Ice Hell … afterward their life ends as before.”
 {:#p99}
 
-#### Conclusion to the Great Hells
+##### Conclusion to the Great Hells
 
 100\. At that point, the Bhagavān spoke in verse:
 {:#p100}
@@ -418,7 +419,7 @@ Are blazing with the light and color of fire.\\
 They are the results of past evils,\\
 And each has sixteen lesser hells.”
 
-#### The Great Vajra Mountains Protect the World
+##### The Great Vajra Mountains Protect the World
 
 101\. The Buddha told the monks, “There’s a great wind that blows between those two chains of great diamond mountains, which is called Sāṃkhya. If this wind were to reach the four continents and 8,000 islands, it would blow the Earth with its named mountains and Sumeru the mountain king five kilometers off the ground. They might well soar fifty kilometers into the sky, and they would all be reduced to dust. Like a handful of fine chaff thrown into the air by a strong man, that great wind would likewise blow the Earth away. Those two great diamond mountain chains block this wind, preventing it from coming. Monks, you should know that those diamond mountains benefit many people. They came about as a result of the conduct of sentient beings.
 {:#p101}
@@ -429,7 +430,7 @@ And each has sixteen lesser hells.”
 103\. “Moreover, the wind between those two mountain chains is foul smelling, impure, rank, and terrible. If it were to reach this world, it would stink up the sentient beings here, and they would go blind. Those two diamond mountain chains block this wind, preventing it from coming. Monks, you should know that those diamond mountains benefit many people. They came about as a result of the conduct of sentient beings.
 {:#p103}
 
-#### Another Ten Hells
+##### Another Ten Hells
 
 104\. “Moreover, there’s another ten hells between those two mountains chains: First is \*Abhra, second is \*Nirabhra, third is \*Ahaha, fourth is Why, fifth is Sheep Bleating, sixth is Sugandhika, seventh is Utpala, eighth is Kumuda, ninth is Puṇḍarīka, and tenth is Padma.
 {:#p104}
@@ -464,12 +465,12 @@ And each has sixteen lesser hells.”
 114\. “What’s called the Padma [Hell]? In that hell, the whole hell is red like the color of a padma flower, so it’s called Padma.”
 {:#p114}
 
-#### The Passage of Time in the Ten Hells
+##### The Passage of Time in the Ten Hells
 
 115\. The Buddha told the monks, “Take for example a sixty-four bushel grain bin filled up with sesame seeds. A person takes one seed from it every hundred years until it’s empty. In the \*Abhra Hell, their punishment wouldn’t be done yet. Similarly, twenty lifetimes in the \*Abhra Hell is equal to one lifetime in the \*Nirabhra Hell. Twenty lifetimes in the \*Nirabhra Hell is equal to one lifetime in the \*Ahaha Hell. Twenty lifetimes in the \*Ahaha Hell is equal to one lifetime in the Why Hell. Twenty lifetimes in the Why Hell is equal to one lifetime in the Sheep Bleating Hell. Twenty lifetimes in the Sheep Bleating Hell is equal to one lifetime in the Sugandhika Hell. Twenty lifetimes in the Sugandhika Hell is equal to one lifetime in the Utpala Hell. Twenty lifetimes in the Utpala Hell is equal to one lifetime in the Kumuda Hell. Twenty lifetimes in the Kumuda Hell is equal to one lifetime in the Puṇḍarīka Hell. Twenty lifetimes in the Puṇḍarīka Hell is equal to one lifetime in the Padma Hell. Twenty lifetimes in the Padma Hell is equivalent to one medium eon. Twenty medium eons is called a great eon.
 {:#p115}
 
-#### The Monk Kokālika’s Fate
+##### The Monk Kokālika’s Fate
 
 116\. “In the Padma Hell, the fire is bright, hot, and blazing. Even if the sinner moves a hundred yojanas away from the fire, they’d still be burned by it. From sixty yojanas away, their ears are deafened, and they hear nothing. From fifty yojanas away, both their eyes are blinded, and they don’t see anything.
 {:#p116}
@@ -523,7 +524,7 @@ And forty-one lives in the \*Abhra Hell,\\
 That’s the disaster of slandering noble people,\\
 Which resulted from his bad intent and words.’”
 
-#### King Yama
+##### King Yama
 
 120\. The Buddha told the monks, “King Yama’s palace is inside the great diamond mountain south of Jambudvīpa. That king rules an area that’s 6,000 yojanas across. His city has seven walls, seven balustrades, seven nettings, and seven rows of trees … and countless birds sing to each other peacefully <em>as before</em>.
 {:#p120}
@@ -534,7 +535,7 @@ Which resulted from his bad intent and words.’”
 122\. “A great warden of hell then grabs King Yama and lays him down on hot iron. The warden forces his mouth open with iron forceps and pours molten copper into it. It burns his gums and tongue. From his throat to his stomach, it burns down through him. No part of him isn’t burned to a crisp. After this punishment is done, he rejoins his maidens, and they entertain each other. His great ministers likewise receive the same fortunes.”
 {:#p122}
 
-#### The Three Heavenly Messengers
+##### The Three Heavenly Messengers
 
 123\. The Buddha told the monks, “There are three [heavenly] messengers.[\[4\]](#n4){:#ref4} What are the three? The first is old age, the second is illness, and the third is death. There are sentient beings whose physical conduct is bad, whose verbal conduct is bad, and whose mental intent is bad. When their bodies break up and their lives end, they fall to hell.
 {:#p123}
@@ -626,7 +627,7 @@ Burning red, they’re hard to look at.\\
 With sixteen lesser hells,\\
 Its fires blaze as a result of doing evil.”
 
-#### King Yama Wishes for Liberation
+##### King Yama Wishes for Liberation
 
 142\. The Buddha told the monks, “King Yama then had this thought occur to him, ‘The world’s sentient beings are deluded and unaware. Their physical conduct is bad, and their verbal and mental conduct are bad. After their lives end, few of them won’t experience this suffering. If the world’s sentient beings could mend their evil ways and cultivate good physical, verbal, and mental conduct, they would experience happiness when their lives end as gods and spirits.
 {:#p142}
