--- a/01_agama/dirgha/DA_30-5.md
+++ b/01_agama/dirgha/DA_30-5.md
@@ -8,9 +8,10 @@ next: DA_30-6.html
 ---
 
 # [The Long Discourses](index.html)
-## 30. Description of the World
-### Chapter 5: Nāgas and Garuḍas
-#### Introduction
+## Part IV
+### 30. Description of the World
+#### Chapter 5: Nāgas and Garuḍas
+##### Introduction
 
 1\. The Buddha told the monks,[\[1\]](#n1){:#ref1} “There are four kinds of <em>nāga</em>s. What are the four? The first is egg-born, the second is womb-born, the third is born of moisture, and the fourth is born spontaneously. These are the four kinds.
 {:#p1}
@@ -18,7 +19,7 @@ next: DA_30-6.html
 2\. “There are four kinds of <em>garuḍa</em>s. What are the four? The first is egg-born, the second is womb-born, the third is born of moisture, and the fourth is born spontaneously. These are the four kinds.
 {:#p2}
 
-#### The Palaces of Nāgas and Garuḍas
+##### The Palaces of Nāgas and Garuḍas
 
 3\. “At the bottom of the great ocean, the Nāga King Sāgara has a palace that’s 80,000 <em>yojana</em>s across. That palace has seven walls, seven balustrades, seven nettings, and seven rows of trees encircling it with decorations made of the seven treasures … and countless birds sing to each other peacefully <em>as before</em>.
 {:#p3}
@@ -41,7 +42,7 @@ next: DA_30-6.html
 9\. “To the north of that tree Kūṭaśālmali, there’s a spontaneously born <em>nāga</em> king’s palace and a spontaneously born <em>garuḍa</em>’s palace. Each of their palaces is 6,000 <em>yojana</em>s across. Those palaces have seven walls, seven balustrades, seven nettings, and seven rows of trees that encircle them with decorations made of the seven treasures … and countless birds sing to each other peacefully <em>as before</em>.
 {:#p9}
 
-#### The Way Garuḍas Hunt Nāgas
+##### The Way Garuḍas Hunt Nāgas
 
 10\. “If an egg-born <em>garuḍa</em> wants to catch and eat a <em>nāga</em>, it flies down from an eastern limb of the tree Kūṭaśālmali. It hits the ocean’s surface with its wings, and the ocean parts for a distance of 200 <em>yojana</em>s. It grabs and eats an egg-born <em>nāga</em> as it likes, but it can’t catch womb-born, moisture-born, or spontaneously born <em>nāga</em>s.
 {:#p10}
@@ -76,7 +77,7 @@ next: DA_30-6.html
 20\. “Again, there are great <em>nāga</em>s that <em>garuḍa</em>s can’t catch. Which are they? Nāga King Sāgara, Nāga King Nanda, Nāga King Upananda, Nāga King \*Airāvaṇa, Nāga King Dhṛtarāṣṭra, Nāga King Sudarśana, Nāga King \*Āloka, Nāga King Kakuda, Nāga King \*Kapila, Nāga King \*Apalāla, Nāga King \*Kanu (?), Nāga King \*Gokanu (?), Nāga King Anavatapta, Nāga King Supratiṣṭhita, Nāga King \*Usamkavata (?), and Nāga King Takṣaka. These great <em>nāga</em> kings can’t be caught and eaten by <em>garuḍa</em>s. Nor can <em>garuḍa</em>s catch and eat the <em>nāga</em>s who live near them.”
 {:#p20}
 
-#### Wrong Views about Rebirth in Heaven
+##### Wrong Views about Rebirth in Heaven
 
 21\. The Buddha told the monks, “If sentient beings uphold the <em>nāga</em> precepts, their minds turn to <em>nāga</em>s and perfect the way of <em>nāga</em>s, and then they are born among <em>nāga</em>s. If sentient beings uphold the <em>garuḍa</em> precepts, their minds turn to <em>garuḍa</em>s and perfect the way of <em>garuḍa</em>s, and then they are born among <em>garuḍa</em>s.
 {:#p21}
@@ -87,7 +88,7 @@ next: DA_30-6.html
 23\. The Buddha said, “I say people with these wrong views are surely headed for two places. Either they’ll be born in hell or they’ll fall to an animal birth.
 {:#p23}
 
-#### Various Wrong Views
+##### Various Wrong Views
 
 24\. “Sometimes, ascetics and priests have such theories and views as these: ‘Self and the world are permanent. This is true; anything else is false.’ ‘Self and the world are impermanent. This is true; anything else is false.’ ‘Self and the world are both permanent and impermanent. This is true; anything else is false.’ ‘Self and the world are neither permanent nor impermanent. This is true; anything else is false.’
 {:#p24}
@@ -101,7 +102,7 @@ next: DA_30-6.html
 27\. “Some people say, ‘There’ll thus be another death [in a future life]. This is true; anything else is false.’ Others say, ‘There won’t be another death. This is true; anything else is false.’ Sometimes, they say, ‘There’ll thus be another death, and there won’t be another death. This is true; anything else is false.’ Some also say, ‘It’s not the case that there’ll be another death or won’t be another death. This is true; anything else is false.’
 {:#p27}
 
-#### Views about Permanence and Impermanence
+##### Views about Permanence and Impermanence
 
 28\. “Suppose those ascetics and priests create such a theory and such a view as this: ‘[Self and] the world are permanent. This is true; anything else is false.’ They have a view of self, a view of soul, a view of body, and a view of the world regarding conditioned things. Therefore, they say, ‘Self and the world are permanent.’
 {:#p28}
@@ -115,7 +116,7 @@ next: DA_30-6.html
 31\. “There are those who say, ‘[Self and the world are] neither permanent nor impermanent. [This is true; anything else is false.]’ They have a view of self, a view of soul, a view of body, and a view of the world regarding conditioned things. Therefore, they say, ‘Self and the world are neither permanent nor impermanent.’
 {:#p31}
 
-#### Views about Being Limited and Unlimited
+##### Views about Being Limited and Unlimited
 
 32\. “There are those who say, ‘Self and the world are limited. [This is true; anything else is false.]’ They have a view of self, a view of soul, a view of body, and a view of the world regarding conditioned things. They say, ‘The soul is limited, the body is limited, and the world is limited. From its conception in the womb until it reaches the charnel ground, the four elements possessed by the body thus change. After not more than seven births, the body and soul’s actions come to an end, and the self enters the class of purity.’ Therefore, they say, ‘Self [and the world] are limited.’
 {:#p32}
@@ -129,7 +130,7 @@ next: DA_30-6.html
 35\. “There are those who say, ‘Self and the world are neither limited nor unlimited. [This is true; anything else is false.]’ They have a view of self, a view of soul, a view of body, and a view of the world regarding conditioned things. They say, ‘The soul, body, [and the world] are neither limited nor unlimited. From its conception in the womb until it reaches the charnel ground, the four elements possessed by the body thus change. After not more than seven births, the body and soul’s actions come to an end, and the self enters the class of purity.’ Therefore, they say, ‘Self [and the world] are neither limited nor unlimited.’
 {:#p35}
 
-#### Views about the Soul and Body
+##### Views about the Soul and Body
 
 36\. “There are those that say, ‘The soul and the body are the same. [This is true; anything else is false.]’ They have the view that their own body has a soul and the view that other bodies have souls. Therefore, they say, ‘The soul and the body are the same.’
 {:#p36}
@@ -143,7 +144,7 @@ next: DA_30-6.html
 39\. “There are those that say, ‘There’s no body or soul. [This is true; anything else is false.]’ They have the view that this body has no soul and the view that other bodies have no souls. Therefore, they say, ‘There’s no soul and no body.’
 {:#p39}
 
-#### Views about Present and Future Lives
+##### Views about Present and Future Lives
 
 40\. “There are those that say, ‘There is thus another death. [This is true; anything else is false.]’ Those people have the view of having a soul in the present and having a body and soul that will wander in the hereafter. Therefore, they say, ‘There is thus another death.’
 {:#p40}
@@ -157,7 +158,7 @@ next: DA_30-6.html
 43\. “[There are those that say,] ‘There’s neither another death nor no other death. [This is true; anything else is false.]’ They say, ‘The body and soul in the present perish, and the body and soul in the next life perish.’ Therefore, they say, ‘There’s neither another death nor no other death.’”
 {:#p43}
 
-#### The Parable of the Blind Men and the Elephant
+##### The Parable of the Blind Men and the Elephant
 
 44\. The Bhagavān then told the monks, “Long ago, there was a king named Ādarśamukha. He gathered a group of men who were born blind and told them, ‘All of you were born blind. Would any of you be familiar with an elephant?’
 {:#p44}
