--- a/01_agama/dirgha/DA_30-6.md
+++ b/01_agama/dirgha/DA_30-6.md
@@ -8,9 +8,10 @@ next: DA_30-7.html
 ---
 
 # [The Long Discourses](index.html)
-## 30. Description of the World
-### Chapter 6: The Asuras
-#### Geography
+## Part IV
+### 30. Description of the World
+#### Chapter 6: The Asuras
+##### Geography
 
 1\. The Buddha told the monks,[\[1\]](#n1){:#ref1} “The Asura Rāhu’s city is on the coast north of Mount Sumeru. It’s 80,000 yojanas across and has seven fortress walls, seven balustrades, seven nettings, and seven rows of trees encircling it with decorations made of the seven treasures. The walls are 3,000 yojanas tall and 2,000 yojanas wide.
 {:#p1}
@@ -72,7 +73,7 @@ next: DA_30-7.html
 20\. “North of that discussion hall, there’s a stairway made of the seven treasures that leads into the palace. There’s a stairway that leads to Śāla Park. There’s a stairway that leads to Most Marvelous Park. There’s a stairway that leads to Śālmalī Park. There’s a stairway that leads to Nandana Park. There’s a stairway that leads to the Pārijāta tree. There’s a stairway that leads to Lake Upananda. There’s a stairway that leads to the great minister’s palace. There’s also a stairway that leads to the palaces of lesser asuras.
 {:#p20}
 
-#### Asura King Rāhu
+##### Asura King Rāhu
 
 21\. “When the Asura King [Rāhu] wants to go sightseeing at Śāla Park, he thinks of Asura King Vemacitrin. Asura King Vemacitrin then thinks, ‘Asura King Rāhu is thinking of me now!’ He gets himself ready and rides a treasure chariot to Asura King Rāhu while surrounded by a countless assembly of servants. He goes before the Asura King and then stands to one side.
 {:#p21}
