--- a/01_agama/dirgha/DA_30-7.md
+++ b/01_agama/dirgha/DA_30-7.md
@@ -8,9 +8,10 @@ next: DA_30-8.html
 ---
 
 # [The Long Discourses](index.html)
-## 30. Description of the World
-### Chapter 7: The Four God Kings
-#### Geography
+## Part IV
+### 30. Description of the World
+#### Chapter 7: The Four God Kings
+##### Geography
 
 1\. The Buddha told the monks,[\[1\]](#n1){:#ref1} “A thousand yojanas to the east of Sumeru the mountain king is the God King Dhṛtarāṣṭra’s city named \*Bhadrottamā, which is 6,000 yojanas across. It has seven fortress walls, seven balustrades, seven nettings, and seven rows of trees encircling it with decorations made of the seven treasures … and countless birds sing to each other peacefully <em>as before</em>.
 {:#p1}
@@ -36,7 +37,7 @@ next: DA_30-8.html
 8\. “Those palace halls are forty yojanas, twenty yojanas, or at least five yojanas across. From the city Refuge to Many, there’s a treasure stairway that goes to the city \*Bhadrottamā. There’s a stairway that leads to the city Sudarśana. There’s a stairway that leads to the city Cūḷasudarśana. There’s a stairway that leads to the city Terrible and the city Heavenly Respect. There’s a stairway that leads to the park Kapīvanta. There’s a stairway that leads to Lake Nalinī. There’s also a stairway that leads to the palace of the great minister of the four god kings.
 {:#p8}
 
-#### King Vaiśravaṇa
+##### King Vaiśravaṇa
 
 9\. “If God King Vaiśravaṇa wants to go sightseeing at the park Kapīvanta, he thinks about God King Dhṛtarāṣṭra. God King Dhṛtarāṣṭra then thinks to himself, ‘King Vaiśravaṇa is thinking of me now!’ He gets himself ready and rides a treasure chariot to God King Vaiśravaṇa while surrounded by countless gandharva spirits. He goes before the God King and then stands to one side.
 {:#p9}
