--- a/01_agama/dirgha/DA_30-8.md
+++ b/01_agama/dirgha/DA_30-8.md
@@ -8,9 +8,10 @@ next: DA_30-9.html
 ---
 
 # [The Long Discourses](index.html)
-## 30. Description of the World
-### Chapter 8: The Trāyastriṃśa Gods
-#### Geography
+## Part IV
+### 30. Description of the World
+#### Chapter 8: The Trāyastriṃśa Gods
+##### Geography
 
 1\. The Buddha told the monks,[\[1\]](#n1){:#ref1} “The city of the Trāyastriṃśa gods sits at the summit of Sumeru the mountain king, and it’s 80,000 yojanas across. That city has seven walls, seven balustrades, seven nettings, and seven rows of trees encircling it with decorations made of the seven treasures. The city is a hundred yojanas tall, and it’s sixty yojanas wide at the top. The city gates are sixty yojanas high and thirty yojanas wide. The gates are five hundred yojanas apart from each other, and each gate is guarded by five hundred yakṣa spirits who protect the Trāyastriṃśa gods.
 {:#p1}
@@ -96,7 +97,7 @@ next: DA_30-9.html
 28\. “North of Sudarśana Hall, there are two stairways to the palace hall of the Lord of Gods. East of Sudarśana Hall, there are two stairways to Pāruṣaka Park. Again, there are stairways to Citraratha Park, stairways to Miśrakā Park, stairways to Nandana Park, stairways to Nandana Lake, stairways to the Pārijāta Tree, stairways to the palaces of the Trāyastriṃśa gods, stairways to the palaces of other gods, and stairways to the palace of Nāga King Airāvaṇa.
 {:#p28}
 
-#### Śakra the Lord of Gods
+##### Śakra the Lord of Gods
 
 29\. “When Śakra the Lord of Gods wants to go sightseeing in Pāruṣaka Park, he thinks of the Trāyastriṃśa heavenly ministers. The Trāyastriṃśa heavenly ministers then think to themselves, ‘Lord Śakra is thinking of me now!’ They get themselves ready and ride treasure chariots to Lord Śakra while surrounded by countless assemblies. They go before Lord Śakra and then stand to one side.
 {:#p29}
@@ -140,7 +141,7 @@ next: DA_30-9.html
 42\. “Śakra the Lord of Gods has ten great gods who always follow and serve him on his left and right. Who are the ten? The first is named Indraka, the second is named Gopīkā, the third is named Virūḍhaka, the fourth is named Virūpākṣa, the fifth is named Dāraka (?), the sixth is named Bala (?), the seventh is named Jīvaka (?), the eighth is named Rohaṇa (?), the ninth is named Mūtra (?), and the tenth is named Nando (?).[\[7\]](#n7){:#ref7} Such is the great miraculous power and majesty possessed by Śakra the Lord of Gods.
 {:#p1}
 
-#### Things the World and Heaven Have in Common
+##### Things the World and Heaven Have in Common
 
 43\. “The people of Jambudvīpa prize water flowers that are gentle and sweet-smelling, such as utpala flowers, padma flowers, kumuda flowers, puṇḍarīka flowers, and sugandha flowers. The land flowers that they prize are atimuktaka flowers, campaka flowers, pāṭala flowers, sumanā flowers, vārṣika flowers, and maiden flowers.[\[8\]](#n8){:#ref8} Those in Godānīya, Uttarakuru, and Pūrvavideha, the nāga palaces, and garuḍa palaces [prize] the same the water and land flowers.
 {:#p43}
@@ -166,7 +167,7 @@ next: DA_30-9.html
 50\. “From the radiance of a firefly to that of a Buddha, the sum total of those lights is not like that of the radiance of the truth of suffering, truth of its formation, truth of its cessation, and truth of the path. Therefore, monks, if you want to pursue radiance, you should pursue the radiance of the truth of suffering, truth of its formation, truth of its cessation, and truth of the path. You should train in them.
 {:#p50}
 
-#### The Bodies and Clothing of People and Gods
+##### The Bodies and Clothing of People and Gods
 
 51\. “The bodies of people in Jambudvīpa are three and a half cubits long, and their clothing is seven cubits long and three and a half cubits wide.[\[10\]](#n10){:#ref10} The bodies of people in Godānīya and Pūrvavideha are also three and a half cubits long, and their clothing is seven cubits long and three and a half cubits wide. The bodies of people in Uttarakuru are seven cubits long, and their clothing is fourteen cubits long and seven cubits wide. Their clothing weighs one ounce.
 {:#p51}
@@ -174,7 +175,7 @@ next: DA_30-9.html
 52\. “The bodies of asuras are one yojana long, and their clothing is two yojanas long and one yojana wide. Their clothing weighs a quarter ounce. The bodies of the four god kings are half of a yojana long, and their clothing is a yojana long and half of a yojana wide. Their clothing weighs half of an ounce. The bodies of the Trāyastriṃśa gods are one yojana long, and their clothing is two yojanas long and one yojana wide. Their clothing weighs a quarter ounce. The bodies of the Yama gods are two yojanas long, and their clothing is four yojanas long and two yojanas wide. Their clothing weighs three twenty-fourths of an ounce. The bodies of the Tuṣita gods are four yojanas long, and their clothing is eight yojanas long and four yojanas wide. Their clothing weighs a little more than a twenty-fourth of an ounce. The bodies of the Nirmāṇarati gods are eight yojanas long, and their clothing is sixteen yojanas long and eight yojanas wide. Their clothing weighs a twenty-fourth of an ounce. The bodies of the Paranirmitavaśavartin gods are sixteen yojanas long, and their clothing is thirty-two yojanas long and sixteen yojanas wide. Their clothing weighs a forty-eighth of an ounce. The gods above them each wear clothing that fits their bodies.
 {:#p52}
 
-#### The Life Spans of Sentient Beings
+##### The Life Spans of Sentient Beings
 
 53\. “Few people in Jambudvīpa live for more than a hundred years, and many live for less. Few people in Godānīya live for more than 200 years, and many live for less. Few people in Pūrvavideha live for more than 300 years, and many live for less. People in Uttarakuru live for 1,000 years, and none live for more or less than that.
 {:#p53}
@@ -194,7 +195,7 @@ next: DA_30-9.html
 58\. “This is the extent of sentient beings, the extent of life spans, and the extent of the world. This is the extent of what’s called the destinations of birth, old age, illness, death, and rebirth of those collections of elements, aggregates, and senses.”
 {:#p58}
 
-#### The Four Foods of Sentient Beings
+##### The Four Foods of Sentient Beings
 
 59\. The Buddha told the monks, “All sentient beings subsist on four kinds of food. What are the four? Physical and fine food is the first, food of contact is the second, food of thought is the third, and food of consciousness is the fourth.
 {:#p59}
@@ -208,7 +209,7 @@ next: DA_30-9.html
 62\. “What are the sentient beings whose food is contact? Egg-born sentient beings have contact as food. What are the sentient beings whose food is thought? There are sentient beings that subsist because of food of thought. Their faculties grow, and then their lives don’t end. This is food of thought. What are [the sentient beings] whose food is consciousness? Sentient beings in hell and the formless realm are called those whose food is consciousness.
 {:#p62}
 
-#### Commerce and Procreation among Sentient Beings
+##### Commerce and Procreation among Sentient Beings
 
 63\. “The people of Jambudvīpa use gold, silver, jewels, grain, silk, and workers to generate wealth and make their livings. The people of Godānīya use livestock and gemstones to make an easy living. The people of Pūrvavideha use grain, silk, and gemstones to make an easy living. The people of Uttarakuru make an easy living without any commerce.
 {:#p63}
@@ -222,7 +223,7 @@ next: DA_30-9.html
 66\. “Asuras have sexual intercourse by exchanging energy between their male and female organs while in close proximity to each other. The four god kings and Trāyastriṃśa gods are likewise. The Yama gods have sexual intercourse by being close to each other. The Tuṣita gods have sexual intercourse by holding hands. The Nirmāṇarati gods have sexual intercourse by looking passionately at each other. The Paranirmitavaśavartin gods have sexual intercourse by glancing at each other. Above those heavens, there’s no more sexual desire.
 {:#p66}
 
-#### The Process of Becoming a God
+##### The Process of Becoming a God
 
 67\. “Suppose a sentient being commits bad physical deeds, speaks bad words, and thinks bad thoughts. Their final consciousness ceases here when their body breaks up and their life ends, and then an initial consciousness arises in hell. Because of that consciousness, they have name and form. Because of that name and form, they have the six senses.
 {:#p67}
@@ -236,7 +237,7 @@ next: DA_30-9.html
 70\. “Sometimes, a sentient being commits good physical deeds, speaks good words, and thinks good thoughts. When their body breaks up and their life ends, they are born among humans. Their final consciousness ceases here, and an initial consciousness arises in a human. Because of that consciousness, they have name and form. Because of that name and form, they have the six senses.
 {:#p70}
 
-#### Birth among the Four God Kings
+##### Birth among the Four God Kings
 
 71\. “Sometimes, a sentient being commits good physical deeds, speaks good words, and thinks good thoughts. When their body breaks up and their life ends, they are born among the four god kings. Their final consciousness ceases here, and an initial consciousness arises among the four god kings. Because of that consciousness, they have name and form. Because of that name and form, they have the six senses.
 {:#p71}
@@ -277,7 +278,7 @@ next: DA_30-9.html
 83\. “When those gods go sightseeing, they become defiled and attached. They look east and forget what’s west, or they look west and forget what’s east. When they’re first born, they thought to themselves, ‘What was the conduct that caused me to be born here now?’ But when they go sightseeing, they forget all about that, and the attractive goddesses attend to them.
 {:#p83}
 
-#### Birth among the Trāyastriṃśa Gods
+##### Birth among the Trāyastriṃśa Gods
 
 84\. “When a sentient being does good physical deeds, speaks good words, and thinks good thoughts, they are born in the Trāyastriṃśa Heaven when their body breaks up and their life ends. Their final consciousness ceases here, and an initial consciousness arises [in one of those gods]. Because of that consciousness, they have name and form. Because of that name and form, they have the six senses.
 {:#p84}
@@ -285,7 +286,7 @@ next: DA_30-9.html
 85\. “When that god is first born, they’re like a two- or three-year-old child in Jambudvīpa. They spontaneously appear on a god’s knee, and that god says, ‘This is my son!’ or ‘This is my daughter!’ in the same way.
 {:#p85}
 
-#### Birth among the Yama Gods
+##### Birth among the Yama Gods
 
 86\. “When a sentient being does good physical [deeds], speaks [good words], and thinks [good thoughts], they are born in the Yama Heaven when their body breaks up and their life ends …
 {:#p86}
@@ -293,7 +294,7 @@ next: DA_30-9.html
 87\. “When that god is first born, they’re like a three- or four-year-old child in Jambudvīpa …
 {:#p87}
 
-#### Birth among the Tuṣita Gods
+##### Birth among the Tuṣita Gods
 
 88\. “When a sentient being does good physical [deeds], speaks [good words], and thinks [good thoughts], they are born in the Tuṣita Heaven when their body breaks up and their life ends …
 {:#p88}
@@ -301,7 +302,7 @@ next: DA_30-9.html
 89\. “When that god is first born, they’re like a four- or five-year-old child in Jambudvīpa …
 {:#p89}
 
-#### Birth among the Nirmāṇarati Gods
+##### Birth among the Nirmāṇarati Gods
 
 90\. “When a sentient being does good physical [deeds], speaks [good words], and thinks [good thoughts], they are born in the Nirmāṇarati Heaven when their body breaks up and their life ends …
 {:#p90}
@@ -309,7 +310,7 @@ next: DA_30-9.html
 91\. “When that god is first born, it’s like a five- or six-year-old child in Jambudvīpa …
 {:#p91}
 
-#### Birth among the Paranirmitavaśavartin Gods
+##### Birth among the Paranirmitavaśavartin Gods
 
 92\. “When a sentient being does good physical [deeds], speaks [good words], and thinks [good thoughts], they are born in the Paranirmitavaśavartin Heaven when their body breaks up and their life ends …
 {:#p92}
@@ -317,7 +318,7 @@ next: DA_30-9.html
 93\. “When that god is first born, it’s like a six- or seven-year-old child in Jambudvīpa …”
 {:#p93}
 
-#### The Three Fasting Days
+##### The Three Fasting Days
 
 94\. The Buddha told the monks, “There are three fasts during a half month. What are the three? The eighth day is a fasting day, the fourteenth day is a fasting day, and the fifteenth day is a fasting day. These are the three fasts.
 {:#p94}
@@ -370,7 +371,7 @@ next: DA_30-9.html
 110\. “These are the reasons for these three fasts.
 {:#p110}
 
-#### Śakra’s Verse Praising the Fasts
+##### Śakra’s Verse Praising the Fasts
 
 111\. “Lord Śakra then wants the gods rejoice twice as much, so he speaks this verse:
 {:#p111}
@@ -394,7 +395,7 @@ Will become my equals!’”
 114\. The Buddha told the monks, “When that monk speaks this verse, I call it well put and well spoken. I would agree with it. Why is that? That monk has ended lust, anger, and delusion, and he’s freed from birth, old age, illness, death, grief, sorrow, pain, and trouble. I say that person is free of the basis for suffering.”
 {:#p114}
 
-#### Yakṣa Spirits that Inhabit the Earth
+##### Yakṣa Spirits that Inhabit the Earth
 
 115\. The Buddha told the monks, “The homes, dwellings, and buildings of all people have yakṣa spirits. None are empty of them. Yakṣa spirits are in all avenues, streets, intersections, butcher shops, markets, and graveyards. None are empty of them. All those yakṣa spirits are named for their places of refuge. They’re named for the people, towns, cities, countries, lands, mountains, and rivers in which they take refuge.”
 {:#p115}
@@ -411,7 +412,7 @@ Will become my equals!’”
 119\. “‘Suppose there are people who practice the good Dharma, who’s views are correct and act according to their belief, and who perfect the ten good deeds. One such person has a hundred or a thousand spirits protecting them, just as the king or a king’s minister has a hundred or a thousand people guarding them. They are likewise. A single person who practices the good Dharma and perfects the ten good deeds has a hundred or a thousand spirits protecting them. As a result of this, some worldly people are harassed by yakṣa spirits, and some are not harassed by them.’”
 {:#p119}
 
-#### Comparing Various Places to Jambudvīpa
+##### Comparing Various Places to Jambudvīpa
 
 120\. The Buddha told the monks, “People in Jambudvīpa have three ways they are better than people in Godānīya. What are the three? First, they are courageous, have good memories, and can perform their work. Second, they are courageous, have good memories, and diligently cultivate the religious life. Third, they are courageous, have good memories, and buddhas appear in their land. These are three ways they are better than people in Godānīya.
 {:#p120}
@@ -461,7 +462,7 @@ Will become my equals!’”
 135\. “These gods have three ways they are better than [people in] Jambudvīpa. What are the three? First are their long life spans. Second are their handsome appearances. Third are their many pleasures. These are three ways they are better than [people in] Jambudvīpa.”
 {:#p135}
 
-#### The Thirty-Eight Kinds of Beings
+##### The Thirty-Eight Kinds of Beings
 
 136\. The Buddha told the monks, “The desire realm has twelve kinds of sentient beings. What are the twelve? First are those in hell. Second are those born as animals. Third are the hungry ghosts. Fourth are humans. Fifth are the asuras. Sixth are the four god kings. Seventh are the Trāyastriṃśa gods. Eighth are the Yama gods. Ninth are the Tuṣita gods. Tenth are the Nirmāṇarati gods. Eleventh are the Paranirmitavaśavartin gods. Twelfth are the Māra gods.
 {:#p136}
@@ -472,7 +473,7 @@ Will become my equals!’”
 138\. “The formless realm has four kinds of sentient beings. What are the four? First are the gods who cognize space, second are the gods who cognize consciousness, third are the gods who cognize nothingness, and fourth are the gods who cognize having and not having conception.”
 {:#p138}
 
-#### The Spirits of the Four Gross Elements
+##### The Spirits of the Four Gross Elements
 
 139\. The Buddha told the monks, “There are spirits of the four gross elements. What are the four? First is the earth spirit, second is the water spirit, third is the wind spirit, and fourth is the fire spirit.
 {:#p139}
@@ -545,7 +546,7 @@ Will become my equals!’”
 159\. “The wind spirit became removed from dust and free of defilement [right there on her seat], and her vision of the Dharma was purified. The wind spirit was like white cloth that readily accepts a dye. Her faith was purified, and she attained the Dharma eye without any doubts. Attaining the reward of certainty, she didn’t fall to the unpleasant destinies, nor did she set out on some other path. Achieving fearlessness, she told the three spirits, ‘I now take refuge in the Buddha, take refuge in the Dharma, and take refuge in the Saṅgha. I won’t kill, steal, engage in sex, lie, or drink alcohol for the rest of my life. Permit me to become a laywoman in the correct Dharma.’”
 {:#p159}
 
-#### On Clouds, Lightning, and Rain
+##### On Clouds, Lightning, and Rain
 
 160\. The Buddha told the monks, “There are four kinds of clouds. What are the four? The first is white-colored, the second is black-colored, the third is red-colored, and the fourth is crimson-colored. The white clouds have a large amount of earth element in them. The black clouds have a large amount of water element in them. The red clouds have a large among of fire element in them. The crimson clouds have a large among of wind element in them.
 {:#p160}
