--- a/01_agama/dirgha/DA_30-9.md
+++ b/01_agama/dirgha/DA_30-9.md
@@ -8,9 +8,10 @@ next: DA_30-10.html
 ---
 
 # [The Long Discourses](index.html)
-## 30. Description of the World
-### Chapter 9: The Three Catastrophes
-#### The Four Measureless Eons
+## Part IV
+### 30. Description of the World
+#### Chapter 9: The Three Catastrophes
+##### The Four Measureless Eons
 
 1\. The Buddha told the monks,[\[1\]](#n1){:#ref1} “There are four periods that last a long time, that are measureless and limitless. The number of years, months, and days can’t be calculated.
 {:#p1}
@@ -21,7 +22,7 @@ next: DA_30-10.html
 3\. The Buddha told the monks, “The world has three catastrophes. What are the three? First is the catastrophe of fire. Second is the catastrophe of water. Third is the catastrophe of wind. There are three upper limits to these catastrophes. What are the three? First is the Ābhāsvara Heaven. Second is the Śubhakṛtsna Heaven. Third is the Bṛhatphala Heaven. The catastrophe of fire reaches the Ābhāsvara Heaven and stops there. The catastrophe of water reaches the Śubhakṛtsna Heaven, and stops there. The catastrophe of wind reaches the Bṛhatphala Heaven and stops there.
 {:#p3}
 
-#### The Catastrophe of Fire
+##### The Catastrophe of Fire
 
 4\. “What is the catastrophe of fire? When the catastrophe of fire is about to happen, the world’s people all practice the correct Dharma. They have right view, aren’t deluded, and cultivate the ten good deeds. When they practice these things, the people attain the second dhyāna, and they leap up into the sky. Those people on the noble path, the heavenly path, and the Brahma path call out from above: ‘Good people, you should know the happiness of the second dhyāna without perception or examination! The second dhyāna is happiness!’
 {:#p4}
@@ -43,7 +44,7 @@ next: DA_30-10.html
 9\. The Buddha told the monks, “You should know from this that all formed things are impermanent. They are liable to change and disintegrate, which makes them unreliable. Conditioned things are quite troublesome. You should seek the path of freedom that transcends the world.
 {:#p9}
 
-#### The Seven Suns
+##### The Seven Suns
 
 10\. “A long, long time after that,[\[2\]](#n2){:#ref2} a great, dark gale rises. It blows the ocean’s water, which is 84,000 yojanas deep. The wind then divides into two. They grab the palace of the sun and place it halfway up Mount Sumeru, which is 42,000 yojanas away from the earth in the orbit of the sun. As a result of this, the world then has two suns that rise. When two suns rise, all the small rivers, streams, and brooks in the world dry up.”
 {:#p10}
@@ -144,7 +145,7 @@ next: DA_30-10.html
 42\. The Buddha told the monks, “When the catastrophe of fire happens, no more rain falls from the heavens, and the hundred grains, plants, and trees naturally wither and die. Who would believe that? Only those who witnessed it would, but how could anyone know about it? Thus … the water below the earth disappears, and the wind below the water disappears. Who would believe that? Only those who witnessed it would, but how could anyone know about it? This is the catastrophe of fire.
 {:#p42}
 
-#### The First Restoration of the World
+##### The First Restoration of the World
 
 43\. “How is the world restored after the eon of fire? A long, long time after that, a huge black cloud in the sky releases rain everywhere up to the Ābhāsvara Heaven. The raindrops are the size of cartwheels. It rains like this for countless thousands of years. The water gradually accumulates countless hundreds of thousands of yojanas high, reaching the Ābhāsvara Heaven.
 {:#p43}
@@ -215,7 +216,7 @@ next: DA_30-10.html
 65\. “After that, a windstorm blows on the earth, gouging a great depression into it. The water fills it up, resulting in the oceans. As a result of these events, the four great oceans come to be.
 {:#p65}
 
-#### Three Reasons the Oceans Are Salty
+##### Three Reasons the Oceans Are Salty
 
 66\. “There are three circumstances for the ocean’s saltiness. What are the three? First, a spontaneous cloud covers the entire sky up to the Ābhāsvara Heaven and releases its rain everywhere. It washes over the heavenly palaces and the world. The Brahmakāyika Heaven’s palace, Paranirmitavaśavartin Heaven’s palace … Yama Heaven’s palace, the four continents, 80,000 islands, mountains, great mountains, and Sumeru the mountain king are washed and cleansed. In those places, the pollutants and impure substances are bitter and salty. They flow down into the ocean and combine into a single flavor. Therefore, the ocean’s water is salty.
 {:#p66}
@@ -229,7 +230,7 @@ next: DA_30-10.html
 69\. “This is the catastrophe of fire.”
 {:#p69}
 
-#### The Catastrophe of Water
+##### The Catastrophe of Water
 
 70\. The Buddha told the monks, “What is the catastrophe of water? When the catastrophe of water happens, the world’s people uphold the correct Dharma, have right view, don’t have wrong views, and cultivate the ten good deeds. After they cultivate the ten good deeds, there are people who attain the third dhyāna that’s without joy and leap up into the sky. Those people on the noble path, the heavenly path, and the path of Brahma call out from above: ‘Good people, you should know the happiness of the third dhyāna without joy! The third dhyāna that’s without joy is happiness!’
 {:#p70}
@@ -278,7 +279,7 @@ next: DA_30-10.html
 84\. “This is the catastrophe of water.
 {:#p84}
 
-#### The Second Restoration of the World
+##### The Second Restoration of the World
 
 85\. “How is the world restored after the catastrophe of water? A long, long time after that, a huge black cloud fills the sky up to the Śubhakṛtsna Heaven and releases rain everywhere. The raindrops are the size of cartwheels. It rains like this for countless hundreds of thousands of years. The water gradually accumulates [countless hundreds of thousands of yojanas high], reaching the Śubhakṛtsna Heaven.
 {:#p85}
@@ -292,7 +293,7 @@ next: DA_30-10.html
 88\. “This is the catastrophe of water.”
 {:#p88}
 
-#### The Catastrophe of Wind
+##### The Catastrophe of Wind
 
 89\. The Buddha told the monks, “What is the catastrophe of wind? When the catastrophe of wind happens, the world’s people uphold the correct Dharma, have right view, don’t have wrong views, and cultivate the ten good deeds. After they cultivate the ten good deeds, there are people who attain the pure equanimity and mindfulness of the fourth dhyāna and leap up into the sky. Those people on the noble path, the heavenly path, and the path of Brahma call out from above: ‘Good people, [you should know] the happiness of the pure equanimity and mindfulness of the fourth dhyāna! The pure equanimity and mindfulness of the fourth dhyāna is happiness!’
 {:#p89}
@@ -345,7 +346,7 @@ next: DA_30-10.html
 105\. The Buddha told the monks, “The Śubhakṛtsna Heaven’s palace and Ābhāsvara Heaven’s palace crash into each other, and they’re pulverized to dust. Who would believe that? Only someone who witnessed it would, but how could anyone know about it?  … Thus, the water beneath the earth disappears, and then the air beneath the water disappears. Who would believe that? Only someone who witnessed it would, but how could anyone know about it?
 {:#p105}
 
-#### The Third Restoration of the World
+##### The Third Restoration of the World
 
 106\. “How is the world restored after the catastrophe of wind? A long, long time after that, a huge black cloud fills the sky up to the Bṛhatphala Heaven and releases a deluge. The raindrops are the size of cartwheels. This heavy rain lasts for countless hundreds of thousands of years. The water gradually accumulates [countless hundreds of thousands of yojanas high], reaching the Bṛhatphala Heaven.
 {:#p106}
