--- a/01_agama/madhyama/MA_002.md
+++ b/01_agama/madhyama/MA_002.md
@@ -107,7 +107,7 @@ next: MA_003.html
 <li id="n1"><p>For the source text, cf. <a href="https://cbetaonline.dila.edu.tw/zh/T01n0026_p0422a18" target="_blank">T26.1.422a18-c8</a>. Direct parallels to this <em>sūtra</em> include <a href="https://suttacentral.net/an7.69" target="_blank">AN 7.69</a>, EĀ 39.2, and T28. [<a href="#ref1">back</a>]</p></li>
 <li id="n2"><p><em>Trāyastriṃśa Heaven</em>. C. <span class="ch">三十三天</span>, G. <em>trayatriśa</em>, P. <em>tāvatiṃsa</em>, S. <em>trāyastriṃśa</em>. The C. translates S. <em>trāyastriṃśa</em> lit. as “Heaven of the Thirty-Three.” This was a Buddhist heaven where thirty-two Vedic gods and Indra reside at the top of Mount Sumeru. [<a href="#ref2">back</a>]</p></li>
 <li id="n3"><p><em>pārijāta</em>. C. <span class="ch">晝度</span> (EMC. <em>tɪəu-do</em>), G. ?, P. <em>pāricchattaka</em>, S. <em>pārijātaka</em>. Previously, I believed that the C. was perhaps a partial transliteration (<em>-jāta</em>), based on the Mandarin pronunciation of <span class="ch">晝度</span> (M. <em>zhòudù</em>), but the EMC. pronunciation (EMC. <em>tɪəu-do</em>) doesn’t support this idea. It seems instead to be an interpretive translation that means lit. “day liberation,” which we find in EĀ, too. In any case, I’ve decided to replace the C. with the S. name.</p>
-<p>This is also the present-day name for <a href="https://en.wikipedia.org/wiki/Nyctanthes_arbor-tristis" target="_blank"><em>Nyctanthes arbor-tristis</em></a>, which is commonly called the night-flowering jasmine tree in English. Perhaps more relevant to this <em>sūtra</em>, however, is the sacred Parijat tree located in the modern village of Kintoor of Uttar Pradesh in India. This Parijat tree is actually a Baobab tree estimated to be 800 years old and from a species native to Africa. Local Hindu legends claim that it descends from a tree brought from the heavens by Arjun, or that it was a gift made by Lord Krishna. It’s existence suggests that there was a sacred tree tradition that dates back at least to classical times. This <em>sūtra</em> may be a Buddhist adaptation of this Vedic tradition. While Buddhists created their own sacred tree connected to the Buddha’s awakening, they incorporated this sacred tree as well that was connected to the Vedic gods. [<a href="#ref3">back</a>]</p></li>
+<p>This is also the present-day name for <a href="https://en.wikipedia.org/wiki/Nyctanthes_arbor-tristis" target="_blank"><em>Nyctanthes arbor-tristis</em></a>, which is commonly called the night-flowering jasmine tree in English. Perhaps more relevant to this <em>sūtra</em>, however, is the sacred Parijat tree located in the modern village of Kintoor of Uttar Pradesh in India. This Parijat tree is actually a Baobab tree estimated to be 800 years old and from a species native to Africa. Local Hindu legends claim that it descends from a tree brought from the heavens by Arjun, or that it was a gift made by Lord Krishna. Its existence suggests that there was a sacred tree tradition that dates back at least to classical times. This <em>sūtra</em> may be a Buddhist adaptation of this Vedic tradition. While Buddhists created their own sacred tree connected to the Buddha’s awakening, they incorporated this sacred tree as well that was connected to the Vedic gods. [<a href="#ref3">back</a>]</p></li>
 <li id="n4"><p><em>grows a web of buds</em>. C. <span class="ch">生網</span>. The Pali parallel reads: <em>Na cirass’eva dāni jālakajāto bhavissati</em>. Bhikkhu Bodhi reports that the Manorathapūraṇī commentary says: “The occasion when the tree gives birth to webs of leaves and flower, which come forth together.” C. 網 can also mean “web.” I take it to describe the overall appearance of a budding tree, so I’ve added “buds” to my translation. [<a href="#ref4">back</a>]</p></li>
 <li id="n5"><p><em>grow into bird beaks</em>. C. <span class="ch">生如鳥喙</span>. Pali: <em>Na cirass’eva dani kharakajato bhavissati</em>. Bhikkhu Bodhi translates the commentary as: “The occasion when it becomes possessed of a web of leaves and of flowers well divided and growing separately.” The C. 鳥喙 lit. means “bird beak;” presumably, it refers to the shape of the buds as they grow larger and prepare to open. [<a href="#ref5">back</a>]</p></li>
 <li id="n6"><p><em>hundred </em>yojana<em>s</em>. C. <span class="ch">百由延</span> (EMC. “hundred” + <em>yiəu-yiɛn</em> = G. <em>śada yoyan[a]</em>). S. <em>yojana</em> was an ancient Indic measure of distance. Traditional accounts of a <em>yojana</em>’s length range from 7 to 9 miles. [<a href="#ref6">back</a>]</p></li>
