--- a/01_agama/madhyama/MA_009.md
+++ b/01_agama/madhyama/MA_009.md
@@ -84,27 +84,27 @@ He replied, “No.”
 19\. Again, Śāriputra asked, “I’ve put the question to you, ‘Good man, are you cultivating the religious practice of the ascetic Gautama?’ and you said, ‘So it is.’ Then I asked, ‘Good man, are you cultivating the religious practice of the ascetic Gautama because the precepts are purified?’ and you said, ‘No.’ … ‘Are you cultivating the religious practice of the ascetic Gautama because the mind is purified … views are purified … the hindrance of doubt is purified … knowing and seeing what is and isn’t the path is purified … knowing and seeing the steps of the path is purified … knowledge of the path’s steps to ending [suffering] is purified?’ and you said, ‘No.’ What then is the purpose of cultivating the religious practice of the ascetic Gautama?”
 {:#p19}
 
-He replied, “Good man, it’s because of nirvāṇa without remainder.”
+He replied, “Good man, it’s because of <em>nirvāṇa</em> without remainder.”
 
-20\. Again, he asked, “Why, good man? Does the ascetic Gautama declare that nirvāṇa without remainder because the precepts are purified?”
+20\. Again, he asked, “Why, good man? Does the ascetic Gautama declare that <em>nirvāṇa</em> without remainder because the precepts are purified?”
 {:#p20}
 
 He replied, “No.”
 
-21\. “Does the ascetic Gautama declare that nirvāṇa without remainder because the mind is purified … views are purified … the hindrance of doubt is purified … knowing and seeing what is and isn’t the path is purified … knowing and seeing the steps of the path is purified … knowledge of the path’s steps to ending [suffering] is purified?”
+21\. “Does the ascetic Gautama declare that <em>nirvāṇa</em> without remainder because the mind is purified … views are purified … the hindrance of doubt is purified … knowing and seeing what is and isn’t the path is purified … knowing and seeing the steps of the path is purified … knowledge of the path’s steps to ending [suffering] is purified?”
 {:#p21}
 
 He replied, “No.”
 
-22\. Again, Śāriputra asked, “I’ve put the question to you, sir, ‘Does the ascetic Gautama declare that nirvāṇa without remainder because the precepts are purified?’ and you said, ‘No.’ … ‘Does the ascetic Gautama declare that nirvāṇa without remainder because the mind is purified … views are purified … the hindrance of doubt is purified … knowing and seeing what is and isn’t the path is purified … knowing and seeing the steps of the path is purified … knowledge of the path’s steps to ending [suffering] is purified?’ and you said, ‘No.’ Good man, what do you mean by what you’ve said? How can I know?’”
+22\. Again, Śāriputra asked, “I’ve put the question to you, sir, ‘Does the ascetic Gautama declare that <em>nirvāṇa</em> without remainder because the precepts are purified?’ and you said, ‘No.’ … ‘Does the ascetic Gautama declare that <em>nirvāṇa</em> without remainder because the mind is purified … views are purified … the hindrance of doubt is purified … knowing and seeing what is and isn’t the path is purified … knowing and seeing the steps of the path is purified … knowledge of the path’s steps to ending [suffering] is purified?’ and you said, ‘No.’ Good man, what do you mean by what you’ve said? How can I know?”
 {:#p22}
 
-He answered, “Good man, if the Bhagavān, the ascetic Gautama, declared that nirvāṇa without remainder because the precepts are purified, then he would be saying something with remainder has no remainder. If the Bhagavān, the ascetic Gautama, declared that nirvāṇa without remainder because the mind is purified … views are purified … the hindrance of doubt is purified … knowing and seeing what is and isn’t the path is purified … knowing and seeing the steps of the path is purified … knowledge of the path’s steps to ending [suffering] is purified, then he would be saying something with remainder has no remainder.
+He answered, “Good man, if the Bhagavān, the ascetic Gautama, declared that <em>nirvāṇa</em> without remainder because the precepts are purified, then he would be saying something with remainder has no remainder. If the Bhagavān, the ascetic Gautama, declared that <em>nirvāṇa</em> without remainder because the mind is purified … views are purified … the hindrance of doubt is purified … knowing and seeing what is and isn’t the path is purified … knowing and seeing the steps of the path is purified … knowledge of the path’s steps to ending [suffering] is purified, then he would be saying something with remainder has no remainder.
 
-23\. “Good man, if the Bhagavān declared that nirvāṇa without remainder was to part with these things, then ordinary people would parinirvāṇa when they part with these things, too.
+23\. “Good man, if the Bhagavān declared that <em>nirvāṇa</em> without remainder was to part with these things, then ordinary people would <em>parinirvāṇa</em> when they part with these things, too.
 {:#p23}
 
-24\. “Good man, it’s simply because the precepts are purified that the mind can be purified … because the mind is purified that views can be purified … because views are purified that the hindrance of doubt can be purified … because the hindrance of doubt is purified that knowing and seeing what is and isn’t the path can be purified … because knowing and seeing what is and isn’t the path is purified that knowing and seeing the steps of the path can be purified … because knowing and seeing the steps of the path is purified that knowledge of the path’s steps to ending [suffering] can be purified … because knowledge of the path’s steps to ending [suffering] is purified that the Bhagavān, the ascetic Gautama, declares nirvāṇa without remainder.
+24\. “Good man, it’s simply because the precepts are purified that the mind can be purified … because the mind is purified that views can be purified … because views are purified that the hindrance of doubt can be purified … because the hindrance of doubt is purified that knowing and seeing what is and isn’t the path can be purified … because knowing and seeing what is and isn’t the path is purified that knowing and seeing the steps of the path can be purified … because knowing and seeing the steps of the path is purified that knowledge of the path’s steps to ending [suffering] can be purified … because knowledge of the path’s steps to ending [suffering] is purified that the Bhagavān, the ascetic Gautama, declares <em>nirvāṇa</em> without remainder.
 {:#p24}
 
 #### The Parable of Seven Chariots
@@ -136,7 +136,7 @@ He answered, “Good man, if the Bhagavān, the ascetic Gautama, declared that n
 31\. “‘I then had seven chariots placed between Śrāvastī and Śāketa. After the seven chariots were arranged, I left Śrāvastī and went to the first chariot. I rode the first chariot to the second chariot and dismounted from the first chariot. I rode the second chariot to the third chariot and dismounted from the second chariot. I rode the third chariot to the fourth chariot and dismounted from the third chariot. I rode the fourth chariot to the fifth chariot and dismounted from the fourth chariot. I rode the fifth chariot to the sixth chariot and dismounted from the fifth chariot. I rode the sixth chariot to the seventh chariot and dismounted from the sixth chariot. Riding the seventh chariot, I reached Śāketa in a single day.’
 {:#p31}
 
-32\. “Thus, good man, did the king of Kośala Prasenajit answer that crowd of ministers’ questions. Thus, good man, it’s because the precepts are purified that the mind can be purified … because the mind is purified that views can be purified … because views are purified that the hindrance of doubt can be purified … because the hindrance of doubt is purified that knowing and seeing what is and isn’t the path can be purified … because knowing and seeing what is and isn’t the path is purified that knowing and seeing the steps of the path can be purified … because knowing and seeing the steps of the path is purified that knowledge of the path’s steps to ending [suffering] can be purified … because knowledge of the path’s steps to ending [suffering] is purified that the Bhagavān declares nirvāṇa without remainder.”
+32\. “Thus, good man, did the king of Kośala Prasenajit answer that crowd of ministers’ questions. Thus, good man, it’s because the precepts are purified that the mind can be purified … because the mind is purified that views can be purified … because views are purified that the hindrance of doubt can be purified … because the hindrance of doubt is purified that knowing and seeing what is and isn’t the path can be purified … because knowing and seeing what is and isn’t the path is purified that knowing and seeing the steps of the path can be purified … because knowing and seeing the steps of the path is purified that knowledge of the path’s steps to ending [suffering] can be purified … because knowledge of the path’s steps to ending [suffering] is purified that the Bhagavān declares <em>nirvāṇa</em> without remainder.”
 {:#p32}
 
 #### Śāriputra and Pūrṇa Praise Each Other
