--- a/01_agama/madhyama/MA_010.md
+++ b/01_agama/madhyama/MA_010.md
@@ -62,7 +62,7 @@ next: MA_011.html
 15\. “They doubt themselves, saying: ‘What’s the meaning of this?’ ‘What is this?’[\[3\]](#n3){: #ref3} ‘Where did this sentient being come from?’ ‘Where will it go?’ ‘What were the causes for its existence in the past?’ ‘What will be the causes for its existence in the future?’
 {:#p15}
 
-16\. “Thus, they incorrectly contemplate. As a result of those six views, this view arises: ‘There really is a soul.’ That view gives rise to this: ‘There really is no soul.’ That view gives rise to this: ‘The soul sees the soul.’ That views gives rise to this: ‘The soul sees what’s not the soul.’ That view gives rise to this: ‘What’s not the soul sees the soul.’ That view gives rise to these views: ‘The soul speaks, knows, acts, teaches, initiates actions, and initiates teachings. It’s born in one place or another and receives the good and bad results,’ ‘It certainly comes from nowhere … certainly doesn’t exist … certainly won’t exist.’
+16\. “Thus, they incorrectly contemplate. As a result of those six views, this view arises: ‘There really is a soul.’ That view gives rise to this: ‘There really is no soul.’ That view gives rise to this: ‘The soul sees the soul.’ That view gives rise to this: ‘The soul sees what’s not the soul.’ That view gives rise to this: ‘What’s not the soul sees the soul.’ That view gives rise to these views: ‘The soul speaks, knows, acts, teaches, initiates actions, and initiates teachings. It’s born in one place or another and receives the good and bad results,’ ‘It certainly comes from nowhere … certainly doesn’t exist … certainly won’t exist.’
 {:#p16}
 
 17\. “This is called the downfall of views, being moved by views, and being tied by the bond of views. As a result, ordinary foolish people are subject to the pain of birth, old age, illness, and death.
