--- a/01_agama/madhyama/MA_012.md
+++ b/01_agama/madhyama/MA_012.md
@@ -67,7 +67,7 @@ next: MA_013.html
   </tr>
   <tr>
     <td class="ch" title='t26.1.434c4'>世尊歎曰： 「善哉，惒破，云何，惒破？ 若有比丘無明已盡、明已生。 彼無明已盡、明已生，生後身覺便知：『生後身覺』。 生後命覺便知：『生後命覺』。 身壞，命終。 壽已畢訖，即於現世一切所覺便盡止息。 當知至竟冷。</td>
-    <td id='p12'>12. The Bhagavān commended him, “Good,Vāṣpa! How is it, Vāṣpa? Suppose a monk has ended ignorance and produced insight. Having ended ignorance and produced insight, the feelings of his last body arise, and then he knows, ‘The feelings of this last body are arising.’ The feelings of his last life arise, and then he knows, ‘The feelings of this last life are arising.’<sup id="ref7"><a href="#n7">7</a></sup> His body breaks up and his life ends. Having reached the end of his life span, all the feelings from his present life completely subside. It should be known that he has reached the final cooling.</td>
+    <td id='p12'>12. The Bhagavān commended him, “Good, Vāṣpa! How is it, Vāṣpa? Suppose a monk has ended ignorance and produced insight. Having ended ignorance and produced insight, the feelings of his last body arise, and then he knows, ‘The feelings of this last body are arising.’ The feelings of his last life arise, and then he knows, ‘The feelings of this last life are arising.’<sup id="ref7"><a href="#n7">7</a></sup> His body breaks up and his life ends. Having reached the end of his life span, all the feelings from his present life completely subside. It should be known that he has reached the final cooling.</td>
   </tr>
   <tr>
     <td class="ch" title='t26.1.434c9'>「猶如惒破，因樹有影。 若使有人持利斧來斫彼樹根。 段段斬截，破為十分，或為百分。 火燒成灰。 或大風吹，或著水中。 於惒破意云何？ 影因樹有。 彼影，從是已絕其因，滅不生耶？」</td>
@@ -82,12 +82,12 @@ next: MA_013.html
     <td id='p14'>14. “Vāṣpa, you should know that a monk who has ended ignorance and produced insight is likewise. Having ended ignorance and produced insight, the feelings of his last body arise, and then he knows, ‘The feelings of this last body are arising.’ The feelings of his last life arise, and then he knows, ‘The feelings of this last life are arising.’ His body breaks up and his life ends. Having reached the end of his life span, all the feelings from his present life completely subside. It should be known that he has reached the final cooling.</td>
   </tr>
   <tr>
-    <td class="ch" title='t26.1.434c18'>惒破，比丘如是正心解脫，便得六善住處。 云何為六？ 惒破，比丘眼見色，不喜、不憂。 捨求無為，正念、正智。 惒破，比丘如是正心解脫，是謂得第一善住處。 如是，耳⋯鼻⋯舌⋯身⋯意知法，不喜、不憂。 捨求無為，正念、正智。 惒破，比丘如是正心解脫，是謂得第六善住處。 惒破，比丘如是正心解脫，得此六善住處。」</td>
+    <td class="ch" title='t26.1.434c18'>「惒破，比丘如是正心解脫，便得六善住處。 云何為六？ 惒破，比丘眼見色，不喜、不憂。 捨求無為，正念、正智。 惒破，比丘如是正心解脫，是謂得第一善住處。 如是，耳⋯鼻⋯舌⋯身⋯意知法，不喜、不憂。 捨求無為，正念、正智。 惒破，比丘如是正心解脫，是謂得第六善住處。 惒破，比丘如是正心解脫，得此六善住處。」</td>
     <td id='p15'>15. “Vāṣpa, a monk who is correctly liberated in mind in this way gains six good abiding places. What are the six? Vāṣpa, seeing forms with his eye, a monk isn’t pleased or displeased. With correct mindfulness and correct understanding, he abandons pursuits and does nothing.<sup id="ref8"><a href="#n8">8</a></sup> Vāṣpa, this is called the first good abiding place gained by a monk who is correctly liberated in mind in this way. Thus … with his ear … nose … tongue … body … knowing notions with his mind, he isn’t pleased or displeased. With correct mindfulness and correct understanding, he abandons pursuits and does nothing. Vāṣpa, this is called the sixth good abiding place gained by a monk who is correctly liberated in mind in this way. Vāṣpa, these are the six good abiding places gained by a monk who is correctly liberated in mind in this way.”</td>
   </tr>
   <tr>
     <td class="ch" title='t26.1.434c25'>惒破白曰： 「如是，瞿曇。 多聞聖弟子如是正心解脫，得六善住處。 云何為六？ 瞿曇，多聞聖弟子眼見色，不喜、不憂。 捨求無為，正念、正智。 瞿曇，多聞聖弟子如是正心解脫，是謂得第一善住處。 如是，耳⋯鼻⋯舌⋯身⋯意知法，不喜、不憂。 捨求無為，正念、正智。 如是，瞿曇。 多聞聖弟子如是正心解脫，是謂得第六善住處。 如是，瞿曇。 多聞聖弟子如是正心解脫，得此六善住處。」</td>
-    <td>“Vāṣpa said, “Yes, Gautama. A well-versed noble disciple who is correctly liberated in mind in this way gains six good abiding places. What are the six? Gautama, seeing forms with his eye, a well-versed noble disciple isn’t pleased or displeased. With correct mindfulness and correct understanding, he abandons pursuits and does nothing. Gautama, this is called the first good abiding place gained by a well-versed noble disciple who is correctly liberated in mind in this way. Thus … with his ear … nose … tongue … body … knowing notions with his mind, he isn’t pleased or displeased. With correct mindfulness and correct understanding, he abandons pursuits and does nothing. So it is, Gautama. This is called the sixth good abiding place gained by a well-versed noble disciple who is correctly liberated in mind in this way. So it is, Gautama. A well-versed noble disciple who is liberated in mind in this way gains these six good abiding places.”</td>
+    <td>Vāṣpa said, “Yes, Gautama. A well-versed noble disciple who is correctly liberated in mind in this way gains six good abiding places. What are the six? Gautama, seeing forms with his eye, a well-versed noble disciple isn’t pleased or displeased. With correct mindfulness and correct understanding, he abandons pursuits and does nothing. Gautama, this is called the first good abiding place gained by a well-versed noble disciple who is correctly liberated in mind in this way. Thus … with his ear … nose … tongue … body … knowing notions with his mind, he isn’t pleased or displeased. With correct mindfulness and correct understanding, he abandons pursuits and does nothing. So it is, Gautama. This is called the sixth good abiding place gained by a well-versed noble disciple who is correctly liberated in mind in this way. So it is, Gautama. A well-versed noble disciple who is liberated in mind in this way gains these six good abiding places.”</td>
   </tr>
   <tr>
     <td class="ch" title='t26.1.435a4'>於是，惒破白世尊曰： 「瞿曇，我已知。 善逝，我已解。 瞿曇猶明目人，覆者仰之，覆者發之，迷者示道，暗中施明，若有眼者便見於色。 沙門瞿曇亦復如是。 為我無量方便說法現義，隨其諸道。 世尊，我今自歸於佛、法及比丘眾。 唯願，世尊，受我為優婆塞。 從今日始，終身自歸乃至命盡。</td>
