--- a/01_agama/madhyama/MA_013.md
+++ b/01_agama/madhyama/MA_013.md
@@ -83,7 +83,7 @@ next: MA_015.html
   </tr>
   <tr>
     <td class="ch" title='t26.1.435c23'>「以六界合故，便生母胎。 因六界便有六處。 因六處便有更樂。 因更樂便有覺。 比丘，若有覺者便知苦如真，知苦習⋯知苦滅⋯知苦滅道如真。</td>
-    <td id='p15'>15. “One is born in a mother’s womb because these six elements come together. As a result of these six elements, the six senses exist.<sup id="ref8"><a href="#n8">8</a></sup> As a result of these six senses, there is contact. As a result of contact, there is feeling. Monks, if someone has feeling, then they will truly know suffering … the formation of suffering … the cessation of suffering, and truly know the path to suffering’s cessation.”<sup id="ref9"><a href="#n9">9</a></sup></td>
+    <td id='p15'>15. “One is born in a mother’s womb because these six elements come together. As a result of these six elements, the six senses exist.<sup id="ref8"><a href="#n8">8</a></sup> As a result of these six senses, there is contact. As a result of contact, there is feeling. Monks, if someone has feeling, then they will truly know suffering … the formation of suffering … the cessation of suffering, and truly know the path to suffering’s cessation.<sup id="ref9"><a href="#n9">9</a></sup></td>
   </tr>
   <tr>
     <td class="ch" title='t26.1.435c26'>「云何知苦如真？ 謂生苦、老苦、病苦、死苦、怨憎會苦、愛別離苦、所求不得苦。 略五盛陰苦。 是謂知苦如真。</td>
