--- a/01_agama/madhyama/MA_031.md
+++ b/01_agama/madhyama/MA_031.md
@@ -166,22 +166,22 @@ next: MA_034.html
 
 #### The Noble Truth of Suffering’s Formation
 
-46\. “Good men, what is the noble truth of forming cravings and suffering? It means sentient beings really have cravings for the six internal sense-fields, which are the sense-field of the eye and the sense-fields of the ear, nose, tongue, body, and mind. If there’s craving, dirt, defilement, and attachment, this is called it’s formation.
+46\. “Good men, what is the noble truth of forming cravings and suffering? It means sentient beings really have cravings for the six internal sense-fields, which are the sense-field of the eye and the sense-fields of the ear, nose, tongue, body, and mind. If there’s craving, dirt, defilement, and attachment, this is called its formation.
 {:#p46}
 
 47\. “Good men, the well-versed noble disciple knows, ‘I know the Dharma in this way and see, comprehend, examine, and awaken to it in this way. This is called the noble truth of forming cravings and suffering.’ They know it in this way.
 {:#p47}
 
-48\. “How do they know it? If they have cravings for wives, children, servants, messengers, retinues, land, homes, businesses, and property, then they will work for them. When there’s craving, dirt, defilement, and attachment, this is called it’s formation. They know, ‘This is the noble truth of forming cravings and suffering.’ Thus, the external sense-fields, contact, feeling, conception, intent, and craving are likewise.
+48\. “How do they know it? If they have cravings for wives, children, servants, messengers, retinues, land, homes, businesses, and property, then they will work for them. When there’s craving, dirt, defilement, and attachment, this is called its formation. They know, ‘This is the noble truth of forming cravings and suffering.’ Thus, the external sense-fields, contact, feeling, conception, intent, and craving are likewise.
 {:#p48}
 
-49\. “Good men, sentient beings really have craving for six elements, which are the earth element and the elements of water, fire, air, space, and consciousness. If there’s craving, dirt, defilement, and attachment regarding them, this is called it’s formation.
+49\. “Good men, sentient beings really have craving for six elements, which are the earth element and the elements of water, fire, air, space, and consciousness. If there’s craving, dirt, defilement, and attachment regarding them, this is called its formation.
 {:#p49}
 
 50\. “Good men, the well-versed noble disciple knows it in this way, ‘I know the Dharma in this way and see, comprehend, examine, and awaken to it in this way. This is called the noble truth of forming cravings and suffering.’ They know it in this way.
 {:#p50}
 
-51\. “How do they know it? If they have cravings for wives, children, servants, messengers, retinues, land, homes, businesses, and property, then they will work for them. When there’s craving, dirt, defilement, and attachment, this is called it’s formation. They know, ‘This is the noble truth of forming cravings and suffering.’
+51\. “How do they know it? If they have cravings for wives, children, servants, messengers, retinues, land, homes, businesses, and property, then they will work for them. When there’s craving, dirt, defilement, and attachment, this is called its formation. They know, ‘This is the noble truth of forming cravings and suffering.’
 {:#p51}
 
 52\. “Good men, this noble truth of forming cravings and suffering in the past and these noble truths of forming cravings and suffering in the future and present are true and not false. They don’t part from this, and they are not mistaken. They are true and completely genuine. Union with such truth is possessed, known, seen, comprehended, obtained, and completely awakened to by the noble ones. Therefore, it’s called the noble truth of forming cravings and suffering.
