--- a/01_agama/madhyama/MA_036.md
+++ b/01_agama/madhyama/MA_036.md
@@ -108,7 +108,7 @@ next: MA_041.html
 <p>This <em>sūtra</em> both here and in AN appears to be an excerpt lifted from the <cite>Parinirvāṇa Sūtra</cite> and made into an independent text. Or, perhaps, it was incorporated into the same and later elements of the story there found its way back into these smaller <em>sūtra</em>s. Whichever is the case, the backstory of the Buddha attempting to give a hint to Ānanda to request that he remain in the world and Māra’s successful request for the Buddha to <em>parinirvāṇa</em> is included in AN 8.70. That introduction is not included here in MĀ 36, but it’s placed in the same context when Ānanda becomes upset upon realizing that the cause for the earthquake was the Buddha choosing to <em>parinirvāṇa</em>.</p>
 <p>EĀ 42.5, on the other hand, lacks any context that would place it in the narrative of the <cite>Parinirvāṇa Sūtra</cite>. Ānanda is not the intercutor, and the discourse occurs in the default location of Śrāvastī. The Buddha simply gives the monks a lecture defining the causes of earthquakes.</p>
 <p>Beyond that, the other major difference is that this version only details three reasons for a great earthquake, whereas AN 8.70 and EĀ 42.5 present the well-known list of eight reasons. [<a href="#ref1">back</a>]</p></li>
-<li id="n2"><p><em>to a city called *Mahī in the country of Vajrā</em>. C. <span class="ch">金剛國，城名曰地</span>. Both of these placenames have been trans. to C. The first is straightforward: <span class="ch">金剛</span> (“diamond”) is a well-known trans. of S. <em>vajra</em> (G. <em>vayira</em>, P. <em>vajira</em>). As a placename, there was a city named Vajirā in Pali sources like the <cite>Mahāvamsa</cite> and <cite>Buddhavamsa</cite>. Here, it was apparently the name for a region, though it’s exact identity is unclear to me. The name of the city referenced here was trans. as <span class="ch">地</span> (“earth”). My guess is that it perhaps trans. something like <em>mahī</em>. Normally, it was the name of a major river in India that lit. means “earth.” Perhaps there was a city or town that bore the same name. [<a href="#ref2">back</a>]</p></li>
+<li id="n2"><p><em>to a city called *Mahī in the country of Vajrā</em>. C. <span class="ch">金剛國，城名曰地</span>. Both of these placenames have been trans. to C. The first is straightforward: <span class="ch">金剛</span> (“diamond”) is a well-known trans. of S. <em>vajra</em> (G. <em>vayira</em>, P. <em>vajira</em>). As a placename, there was a city named Vajirā in Pali sources like the <cite>Mahāvamsa</cite> and <cite>Buddhavamsa</cite>. Here, it was apparently the name for a region, though its exact identity is unclear to me. The name of the city referenced here was trans. as <span class="ch">地</span> (“earth”). My guess is that it perhaps trans. something like <em>mahī</em>. Normally, it was the name of a major river in India that lit. means “earth.” Perhaps there was a city or town that bore the same name. [<a href="#ref2">back</a>]</p></li>
 <li id="n3"><p><em>there was a great earthquake … walls crumbled and were destroyed.</em> C. <span class="ch">彼地大動。地大動時，四面大風起，四方彗星出，屋舍牆壁皆崩壞盡</span>, P. <em>mahābhūmicālo ahosi bhiṁsanako salomahaṁso, devadundubhiyo ca phaliṁsu</em>. This lengthy description will be repeated quite often. In AN 8.70, it’s described more simply: “there was a great earthquake, awe-inspiring and hair-raising, and thunder cracked the sky” (Sujato). The reference here to comets might actually describe lights in the sky that sometimes coincide with seismic events. [<a href="#ref3">back</a>]</p></li>
 <li id="n4"><p>This version gives only three reasons for a great earthquake: The geological reason of the earth being disturbed by the water beneath it, a powerful monk or god using their spiritual powers, or when a Buddha decides to <em>parinirvāṇa</em>.</p>
 <p>AN 8.70 agrees with the first two items, then adds: when a <em>bodhisattva</em> is conceived on Earth, when a <em>bodhisattva</em> is born, when a Buddha realizes completely awakening, and when a Buddha first sets the Dhamma wheel in motion. The seventh reason agrees with the third here in MĀ 36: When a Buddha surrenders his life force. The eighth and last reason in AN 8.70 is when a Buddha actually <em>parinirvāṇa</em>s. It’s not difficult to imagine that MĀ 36 might represent an older list that has been expanded given that the agreement between the two lists is in the initial and final items, and many of the additions appear drawn from a source like the story of Bodhisatta Vipassī from DN 14. [<a href="#ref4">back</a>]</p></li>
