--- a/01_agama/madhyama/MA_041.md
+++ b/01_agama/madhyama/MA_041.md
@@ -34,7 +34,7 @@ next: MA_042.html
     <td id='p5'>5. “Why do I say, ‘The prominent man Hastaka is modest’? Hastaka always conducts himself with modesty. He is ashamed and feels shame about bad and unskillful things, defilements, and afflictions that bring bad results and create the roots of birth and death. This is why I say, ‘The prominent man Hastaka is modest.’</td>
   </tr>
   <tr>
-    <td class="ch" title='t125.2.484c14'>「手長者有愧者。』此何因說？ 手長者常行羞愧，可愧、知愧惡不善法、穢污、煩惱受諸惡報，造生死本。 手長者有愧者。』因此故說。</td>
+    <td class="ch" title='t125.2.484c14'>「『手長者有愧者。』此何因說？ 手長者常行羞愧，可愧、知愧惡不善法、穢污、煩惱受諸惡報，造生死本。 『手長者有愧者。』因此故說。</td>
     <td id='p6'>6. “Why do I say, ‘The prominent man Hastaka is conscientious’? He is embarrassed and feels embarrassment by bad and unskillful things, defilements, and afflictions that bring bad results and create the roots of birth and death. This is why I say, ‘The prominent man Hastaka is conscientious.’</td>
   </tr>
   <tr>
