--- a/01_agama/madhyama/MA_051.md
+++ b/01_agama/madhyama/MA_051.md
@@ -62,7 +62,7 @@ They answered, “Hearing bad teachings is its cultivation.”
 
 They answered, “Associating with bad friends is its cultivation.”
 
-12\. “Associating with bad friends has its cultivation; it’s not without cultivation. What’s called the cultivation of associating with bad friends?
+12\. “Associating with bad friends has its cultivation; it’s not without cultivation. What’s called the cultivation of associating with bad friends?”
 
 They answered, “Bad people are its cultivation.”
 {: #p12}
