--- a/01_agama/madhyama/MA_056.md
+++ b/01_agama/madhyama/MA_056.md
@@ -63,7 +63,7 @@ next: MA_057.html
   </tr>
   <tr>
     <td class='ch' title='t26.1.491c3'>「復次，彌醯，比丘者謂所可説聖有義，令心柔軟，使心無蓋。 謂：説戒、説定、説慧。 説解脫、説解脫知見、説漸損。 説不樂聚會、説少欲、説知足。 説斷、説無欲、説滅。 説燕坐、説縁起。 得如是比沙門所説，具得、易、不難得。 彌醯，心解脫未熟、欲令熟者是謂第三習法。</td>
-    <td id='p11'>11. “Furthermore, Meghiya, a monk can be taught about the noble aim, which makes his mind gentle and without hinderance. That is, he’s taught the precepts, taught samādhi, and taught wisdom. He’s taught liberation, taught to know and see liberation, and taught effacement. He’s taught to not enjoy company, taught to desire little, and taught satisfaction. He’s taught to end afflictions, taught the lack of desire, and taught cessation. He’s taught to sit in repose and taught dependent origination. He gets such teachings that are appropriate for an ascetic, fully, easily, and not with difficulty. Meghiya, this is the third thing to cultivate when someone wants to complete the mind’s liberation when it isn’t complete yet.</td>
+    <td id='p11'>11. “Furthermore, Meghiya, a monk can be taught about the noble aim, which makes his mind gentle and without hinderance. That is, he’s taught the precepts, taught <em>samādhi</em>, and taught wisdom. He’s taught liberation, taught to know and see liberation, and taught effacement. He’s taught to not enjoy company, taught to desire little, and taught satisfaction. He’s taught to end afflictions, taught the lack of desire, and taught cessation. He’s taught to sit in repose and taught dependent origination. He gets such teachings that are appropriate for an ascetic, fully, easily, and not with difficulty. Meghiya, this is the third thing to cultivate when someone wants to complete the mind’s liberation when it isn’t complete yet.</td>
   </tr>
   <tr>
     <td class='ch' title='t26.1.491c9'>「復次，彌醯，比丘者常行精進，斷惡不善，修諸善法。 恒自起意專一、堅固，為諸善本不捨方便。 彌醯，心解脫未熟、欲令熟者是謂第四習法。</td>
@@ -83,7 +83,7 @@ next: MA_057.html
   </tr>
   <tr>
     <td class='ch' title='t26.1.491c21'>「彌醯，若比丘自善知識、與善知識倶、善知識共和合，當知必得所可説聖有義，令心柔軟，使心無蓋。 謂：説戒、説定、説慧。 説解脫、説解脫知見、説漸損。 説不樂聚會、説少欲、説知足。 説斷、説無欲、説滅。 説燕坐、説縁起。 得如是比沙門所説，具得、易、不難得。</td>
-    <td id='p16'>16. “Meghiya, if a monk is himself a good friend, in the company of good friends, and in harmony with good friends, you should know that he’ll surely be taught about the noble aim, which will make his mind gentle and without hindrance. That is, he’ll be taught the precepts, taught samādhi, and taught wisdom. He’ll be taught liberation, taught to know and see liberation, and taught effacement. He’ll be taught to not enjoy company, taught to desire little, and taught satisfaction. He’ll be taught to end afflictions, taught the lack of desire, and taught cessation. He’ll be taught to sit in repose and taught dependent origination. He’ll obtain such teachings that are appropriate for an ascetic fully, easily, and not with difficulty.</td>
+    <td id='p16'>16. “Meghiya, if a monk is himself a good friend, in the company of good friends, and in harmony with good friends, you should know that he’ll surely be taught about the noble aim, which will make his mind gentle and without hindrance. That is, he’ll be taught the precepts, taught <em>samādhi</em>, and taught wisdom. He’ll be taught liberation, taught to know and see liberation, and taught effacement. He’ll be taught to not enjoy company, taught to desire little, and taught satisfaction. He’ll be taught to end afflictions, taught the lack of desire, and taught cessation. He’ll be taught to sit in repose and taught dependent origination. He’ll obtain such teachings that are appropriate for an ascetic fully, easily, and not with difficulty.</td>
   </tr>
   <tr>
     <td class='ch' title='t26.1.491c27'>「彌醯，若比丘自善知識、與善知識倶、善知識共和合，當知必行精進，斷惡不善，修諸善法。 恒自起意專一、堅固，為諸善本不捨方便。</td>
@@ -102,7 +102,7 @@ next: MA_057.html
     <td id='p20'>20. “Meghiya, if a monk gets the notion of impermanence, he’ll surely get the notion of selflessness. Meghiya, if a monk gets the notion of selflessness, then he’ll end all self-pride. Right here in the present, he’ll attain his rest, cessation, ending, the unconditioned, and <em>nirvāṇa</em>.”</td>
   </tr>
   <tr>
-    <td class='ch' title='t26.1.492a10'>佛説如是。 尊者彌醯及諸比丘聞佛所説歡喜，奉行</td>
+    <td class='ch' title='t26.1.492a10'>佛説如是。 尊者彌醯及諸比丘聞佛所説歡喜，奉行。</td>
     <td id='p21'>21. The Buddha thus spoke. When Venerable Meghiya and the monks heard what the Buddha taught, they rejoiced and approved.</td>
   </tr>
 </table>
