--- a/01_agama/madhyama/MA_190.md
+++ b/01_agama/madhyama/MA_190.md
@@ -93,7 +93,7 @@ next: MA_200.html
 <p>The remainder of this discourse describes a practice of emptying one’s mind of the weariness caused by experiences (specifically, conceptualizations or perceptions). It begins by emptying oneself of the weariness caused by human society and progresses with a gradual reduction of conceptual experience to increasingly subtle levels until all concepts are stopped in a <em>samādhi</em> without perceptions.</p>
 <p>This idea of gradually reducing conceptualization appears roughly equivalent to the framework of meditative attainment that extended the four meditations with four formless <em>samādhi</em>s. The more common version of this framework culminates with the cessation of conceptualization and experience (P. <em>saññāvedayitanirodha</em>) or a <em>samādhi</em> of complete cessation (C. 滅盡定). This <em>sūtra</em> seems to be an alternate version of that framework, which might explain why the initial steps involve seclusion from human society and the natural world outside of it. They would refer to practicing the four meditations in seclusion before attaining the formless <em>samādhi</em>s. [<a href="#ref5">back</a>]</p></li>
 <li id="n6"><p><em>mental <em>samādhi</em> that’s without perception</em>. C. 無想心定, P/S. <em>animitta cetosamādhi</em>. It’s possible that 想 here was confused with 相, as the two words are homophones and close in meaning (相 means “sign, appearance” and 想 means “idea, notion, concept”) There is therefore a strong temptation to correct the C. reading of 無想 (“without perceptions”) to 無相 (“without signs”). This is because the parallels in P. sources (e.g., MN 121), later C. Abhidharma sources (e.g., the <cite>Mahāvibhāṣā</cite>), and the <cite>Saṃyukta Āgama</cite> all agree that this meditative state was <em>animitta cetosamādhi</em>. But there are a couple problems that stop me from amending the word in my translation here.</p> 
-<p>First, MĀ was not in the same canonical tradition as SĀ or Xuanzang’s translations. It’s parallel passages often disagree with those Sarvāstivāda texts, so I’ve come to resist reflexively correcting it to reflect those readings.</p>
+<p>First, MĀ was not in the same canonical tradition as SĀ or Xuanzang’s translations. Its parallel passages often disagree with those Sarvāstivāda texts, so I’ve come to resist reflexively correcting it to reflect those readings.</p>
 <p>The second problem is that there is a fair amount of inconsistency regarding the fourth of the formless <em>samādhi</em>s in MĀ. Sometimes, the abode neither with nor without conception (非有想非無想處) is missing, and instead we see something else where we would expect it (cf. MĀ 75, MĀ 82, and MĀ 190). We should also notice the different ways this formless abode was translated in other C. sources: “abode with and without conception” (DĀ and EĀ: 有想無想處), “abode without conception” (MĀ: 無想處), and the more familiar “neither conception nor not conception” (SĀ and MĀ: 非想非非想). Given this inconsistency across many sources, it seems irresponsible to amend passages that may indicate the evolution of this concept in early Buddhist texts. I have therefore left the reading stand as it is. [<a href="#ref6">back</a>]</p></li>
 <li id="n7"><p>This passage appears to make the <em>samādhi</em> that’s without perception equivalent to the fourth formless abode that is usually called “neither with nor without conception (or perception).” Here, it must be discarded to attain liberation from rebirth, so it couldn’t be equivalent to <em>nirvāṇa</em>. [<a href="#ref7">back</a>]</p></li>
 </ol>
