--- a/01_agama/dirgha/DA_13.md
+++ b/01_agama/dirgha/DA_13.md
@@ -8,7 +8,8 @@ next: DA_14.html
 ---
 
 # [The Long Discourses](index.html)
-## 13. The Great Method of Origination
+## Part II
+### 13. The Great Method of Origination
 
 1\. Thus I have heard:[\[1\]](#n1){:#ref1} One time, the Buddha was staying in Kuru at Kalmāṣa’s Residence.[\[2\]](#n2){:#ref2} He was accompanied by a great assembly of 1,250 monks.
 {:#p1}
