--- a/01_agama/dirgha/DA_16.md
+++ b/01_agama/dirgha/DA_16.md
@@ -8,7 +8,8 @@ next: DA_17.html
 ---
 
 # [The Long Discourses](index.html)
-## 16. Sujāta
+## Part II
+### 16. Sujāta
 
 1\. Thus I have heard:[\[1\]](#n1){:#ref1} One time, the Buddha was staying on Mount Gṛdhrakūṭa of Rājagṛha. He was accompanied by a great assembly of 1,250 monks.
 {:#p1}
