--- a/01_agama/dirgha/DA_17.md
+++ b/01_agama/dirgha/DA_17.md
@@ -8,7 +8,8 @@ next: DA_18.html
 ---
 
 # [The Long Discourses](index.html)
-## 17. Purification
+## Part II
+### 17. Purification
 
 1\. Thus I have heard:[\[1\]](#n1){:#ref1}  One time, the Buddha was staying at Layman [Vedhañña]’s Grove in the country of Kapilavastu.[\[2\]](#n2){:#ref2} He was accompanied by a great assembly of 1,250 monks.
 {:#p1}
