--- a/01_agama/dirgha/DA_18.md
+++ b/01_agama/dirgha/DA_18.md
@@ -8,7 +8,8 @@ next: DA_19.html
 ---
 
 # [The Long Discourses](index.html)
-## 18. Personal Gladness
+## Part II
+### 18. Personal Gladness
 
 1\. Thus I have heard:[\[1\]](#n1){:#ref1} One time, the Buddha was staying at the city of Nālanda in Prāvārika’s mango grove. He was accompanied by a great assembly of 1,250 monks.
 {:#p1}
