--- a/01_agama/dirgha/DA_19.md
+++ b/01_agama/dirgha/DA_19.md
@@ -8,7 +8,8 @@ next: DA_20.html
 ---
 
 # [The Long Discourses](index.html)
-## 19. The Great Congregation
+## Part II
+### 19. The Great Congregation
 
 1\. Thus I have heard:[\[1\]](#n1){:#ref1} One time, the Buddha was staying at Kapilavastu in the country of the Śākyans. He was accompanied by a great assembly of five hundred monks, all of whom were arhats. Marvelous gods had also gathered from the ten directions to honor the Tathāgata and the saṅgha of monks.
 {:#p1}
