--- a/01_agama/dirgha/DA_23.md
+++ b/01_agama/dirgha/DA_23.md
@@ -8,7 +8,8 @@ next: DA_24.html
 ---
 
 # [The Long Discourses](index.html)
-## 23. Kūṭatāṇḍya
+## Part III
+### 23. Kūṭatāṇḍya
 
 1\. Thus I have heard:[\[1\]](#n1){:#ref1} One time, the Buddha was in the country of Kośala accompanied by a great assembly of 1,250 monks. Touring among the people, they arrived north of the priest town of [Khānumata][\[2\]](#n2){:#ref2} in Kośala and stopped to stay in a rosewood grove.
 {:#p1}
