--- a/01_agama/dirgha/DA_25.md
+++ b/01_agama/dirgha/DA_25.md
@@ -8,7 +8,8 @@ next: DA_26.html
 ---
 
 # [The Long Discourses](index.html)
-## 25. The Naked Wanderer
+## Part III
+### 25. The Naked Wanderer
 
 1\. Thus I have heard:[\[1\]](#n1){:#ref1} One time, the Buddha was staying at the deer preserve near Karṇakāṣṭha of [Ujuññā].[\[2\]](#n2){:#ref2} He was accompanied by a great assembly of 1,250 monks.
 {:#p1}
