--- a/01_agama/madhyama/MA_046.md
+++ b/01_agama/madhyama/MA_046.md
@@ -17,7 +17,7 @@ next: MA_047.html
 2\. It was then that Venerable Śāriputra addressed the monks, “Good men, if a monk doesn’t have conscience or modesty, then that’s detrimental to affection and respect. If he doesn’t have affection or respect, then that’s detrimental to faith. If he doesn’t have faith, then that’s detrimental to right thinking. If he doesn't have right thinking, then that’s detrimental to right mindfulness and right knowledge. If he has no right mindfulness and right knowledge, then that’s detrimental to guarding his faculties … guarding the precepts … having no regrets … gladness … joy … calmness … happiness … samādhi … true seeing and true knowing … disenchantment … lack of desire … liberation. If he doesn’t have liberation, then that’s detrimental to nirvāṇa.
 {: #p2}
 
-3\. “Good men, it’s like a tree that has damaged outer bark. It’s inner bark then doesn’t form. When the inner bark doesn’t form, then the branches … trunk … core … joints … limbs … leaves … flowers … fruit doesn’t form.
+3\. “Good men, it’s like a tree that has damaged outer bark. Its inner bark then doesn’t form. When the inner bark doesn’t form, then the branches … trunk … core … joints … limbs … leaves … flowers … fruit doesn’t form.
 {: #p3}
 
 4\. “Good men, you should know that a monk is likewise. If he doesn’t have conscience or modesty, that’s detrimental to affection and respect. if he doesn’t have affection or respect, that’s detrimental to faith. If he doesn’t have faith, that’s detrimental to right thinking. If he doesn’t have right thinking, that’s detrimental to right mindfulness and right knowledge. If he doesn’t have right mindfulness and right knowledge, that’s detrimental to guarding his faculties … guarding the precepts … having no regrets … gladness … joy … calmness … happiness … samādhi … true seeing and true knowing … disenchantment … lack of desire … liberation. If he doesn’t have liberation, that’s detrimental to nirvāṇa.
@@ -26,7 +26,7 @@ next: MA_047.html
 5\. “Good men, if a monk has conscience and modesty, he readily cultivates affection and respect. If he has affection and respect, he readily cultivates faith. If he has faith, he readily cultivates right thinking. If he has right thinking, he readily cultivates right mindfulness and right knowledge. If he has right mindfulness and right knowledge, he readily cultivates guarding his faculties … guarding the precepts … having no regrets … gladness … joy … calmness … happiness … samādhi … true seeing and true knowing … disenchantment … lack of desire … liberation. If he has liberation, he readily cultivates nirvāṇa.
 {: #p5}
 
-6\. “Good men, it’s like a tree that doesn’t have damaged outer bark. It’s inner bark then will form. When the inner bark forms, then the branches … trunk … core … joints … limbs … leaves … flowers … fruit then will form.
+6\. “Good men, it’s like a tree that doesn’t have damaged outer bark. Its inner bark then will form. When the inner bark forms, then the branches … trunk … core … joints … limbs … leaves … flowers … fruit then will form.
 {: #p6}
 
 7\. “Good men, you should know that a monk is likewise. If he has conscience and modesty, he readily cultivates affection and respect. If he has affection and respect, he readily cultivates faith. If he has faith, he readily cultivates right thinking. If he has right thinking, he readily cultivates right mindfulness and right knowledge. If he has right mindfulness and right knowledge, he readily cultivates guarding his faculties … guarding the precepts … having no regrets … gladness … joy … calmness … happiness … samādhi … true seeing and true knowing … disenchantment … lack of desire … liberation. If he has liberation, he readily cultivates nirvāṇa.”
